--- a/apk/res/values-am/strings.xml
+++ b/apk/res/values-am/strings.xml
@@ -93,27 +93,56 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"የጤና ውሂብዎን ይድረሱበት"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"የተቃጠሉ ካሎሪዎችን ያነባል"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"መተግበሪያዎቹ የተቃጠሉትን ካሎሪዎች እንዲያነቡ ያስችላቸዋል"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"በዳራ ውስጥ ያለን ውሂብ በሙሉ መድረስ"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"<xliff:g id="APP_NAME">%1$s</xliff:g> በዳራ ውስጥ ያለውን ሁሉንም ውሂብ እንዲደርስ ይፈቀድለት?"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤናማነት ውሂብን እና የጤና መዝገቦች ውሂብን እንዲደርስ ይፍቀዱ"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"ከፈቀዱ፣ ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤናማነት ውሂብ እና የጤና መዝገቦች ውሂብን መድረስ ይችላል"</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"ያለፈ የአካል ብቃት እና ጤናማነት ውሂብን ድረስ"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"<xliff:g id="APP_NAME">%1$s</xliff:g> ያለፈ የአካል ብቃት እና ጤናማነት ውሂብን እንዲደርስ ይፈቀድለት?"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት ያለን ውሂብ እንዲደርስ ይፍቀዱ"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"ይህ መተግበሪያ ሁሉንም የቀደመ ውሂብ እንዲደርስ ይፍቀዱ"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"ከፈቀዱ፣ ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> የታከለ ውሂብን መድረስ ይችላል።"</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"ከፈቀዱ፣ ይህ መተግበሪያ ሁሉንም ያለፈ ውሂብ መድረስ ይችላል።"</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"በአሁኑ ጊዜ <xliff:g id="APP_NAME">%1$s</xliff:g> ምንም የማንበብ ፈቃዶች ስላልበሩለት ምንም የአካል ብቃት ውሂብ እየተነበበ አይደለም"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"በዳራ ውስጥ ያለው የውሂብ መዳረሻ"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g> በዳራ ውስጥ ያለውን ውሂብ እንዲደርስ ይፈቀድለት?"</string>
+    <string name="background_read_single_request_title" msgid="4903874755139858906">"<xliff:g id="APP_NAME">%1$s</xliff:g> በዳራ ውስጥ ያለውን ውሂብ እንዲደርስ ይፈቀድ?"</string>
+    <string name="background_read_medical_single_request_description_both_types_granted" msgid="7716161960428574364">"ከፈቀዱ፣ ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤንነት ውሂብ እና የጤና መዝገቦችን መድረስ ይችላል።"</string>
+    <string name="background_read_medical_single_request_description_medical_granted" msgid="5162456401369633859">"ከፈቀዱ፣ ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የጤና መዝገቦችን መድረስ ይችላል።"</string>
+    <string name="background_read_medical_single_request_description_fitness_granted" msgid="6850185345786666516">"ከፈቀዱ ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤንነት ውሂብን መድረስ ይችላል።"</string>
+    <string name="background_read_single_request_description" msgid="2679634929322639576">"ከፈቀዱ ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የጤና አገናኝ ውሂብን መድረስ ይችላል።"</string>
+    <string name="history_read_single_request_title" msgid="6848027207063414793">"<xliff:g id="APP_NAME">%1$s</xliff:g> ያለፈ ውሂብን እንዲደርስ ይፈቀድ?"</string>
+    <string name="history_read_medical_single_request_description" msgid="6408051015819625330">"ከፈቀዱ ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት የታከለ የአካል ብቃት እና ጤንነት ውሂብን መድረስ ይችላል።"</string>
+    <string name="history_read_medical_single_request_description_fallback" msgid="6685832866184737207">"ከፈቀዱ ይህ መተግበሪያ ሁሉንም ያለፈ የአካል ብቃት እና ጤንነት ውሂብ መድረስ ይችላል።"</string>
+    <string name="history_read_single_request_description" msgid="9140843675330318112">"ከፈቀዱ ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት የታከለ የጤና አገናኝ ውሂብን መድረስ ይችላል።"</string>
+    <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"ከፈቀዱ ይህ መተግበሪያ ሁሉንም ያለፈ የጤና አገናኝ ውሂብ መድረስ ይችላል።"</string>
+    <string name="additional_permissions_combined_request_title" msgid="5509177449679251301">"ለ<xliff:g id="APP_NAME">%1$s</xliff:g> ተጨማሪ መዳረሻ ይፈቀድ?"</string>
+    <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"እንዲሁም <xliff:g id="APP_NAME">%1$s</xliff:g> እነዚህን የጤና አገናኝ ቅንብሮች መድረስ ይፈልጋል"</string>
+    <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"በዳራ ውስጥ ያለን ውሂብ በሙሉ መድረስ"</string>
+    <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"በዳራ ውስጥ የጤና መዝገቦችን መድረስ"</string>
+    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"በዳራ ውስጥ የአካት ብቃት እና ጤንነት ውሂብን መድረስ"</string>
+    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤንነት ውሂብን እና የጤና መዝገቦችን እንዲደርስ ይፍቀዱ"</string>
+    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው ይህን ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው ይህን ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="background_read_combined_request_title" msgid="4184649296697480520">"በዳራ ውስጥ ውሂብ ድረስ"</string>
+    <string name="background_read_combined_request_description" msgid="2423480522986545286">"ይህን መተግበሪያ በማይጠቀሙበት ጊዜ መተግበሪያው የጤና አገናኝ ውሂብን እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"ያለፈ የአካል ብቃት እና ጤንነት ውሂብን ድረስ"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት ያለን ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"ይህ መተግበሪያ ሁሉንም የቀደመ ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"ያለፈ ውሂብን ድረስ"</string>
+    <string name="history_read_combined_request_description" msgid="1437787086896636484">"ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት የታከለ የጤና አገናኝ ውሂብን እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"ይህ መተግበሪያ ሁሉንም ያለፈ የጤና አገናኝ ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g> ቀድሞውኑ ለእርስዎ የጤና መዝገቦች ያለፈ ውሂብን መድረስ ይችላል"</string>
+    <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"ስለ ፈቃዶች የበለጠ ያንብቡ"</string>
+    <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"በዳራ ውስጥ ያለን ውሂብ በሙሉ መድረስ"</string>
+    <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"በዳራ ውስጥ የጤና መዝገቦችን መድረስ"</string>
+    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"በዳራ ውስጥ የአካት ብቃት እና ጤንነት ውሂብን መድረስ"</string>
+    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤንነት ውሂብን እና የጤና መዝገቦችን እንዲደርስ ይፍቀዱ"</string>
+    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው ይህን ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው ይህን ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="background_read_access_title" msgid="4184498185599147117">"በዳራ ውስጥ ውሂብ ድረስ"</string>
+    <string name="background_read_access_description" msgid="2360433029368320323">"ይህን መተግበሪያ በማይጠቀሙበት ጊዜ መተግበሪያው የጤና አገናኝ ውሂብን እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"ያለፈ የአካል ብቃት እና ጤንነት ውሂብን ድረስ"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት ያለን ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"ይህ መተግበሪያ ሁሉንም የቀደመ ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"ያለፈ ውሂብን ድረስ"</string>
+    <string name="history_read_access_description" msgid="800722432229526128">"ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት የታከለ የጤና አገናኝ ውሂብን እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"ይህ መተግበሪያ ሁሉንም የጤና አገናኝ ያለፈ ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"በአሁኑ ጊዜ <xliff:g id="APP_NAME">%1$s</xliff:g> ምንም የማንበብ ፈቃዶች ስላልበሩለት ምንም የአካል ብቃት ውሂብ እየተነበበ አይደለም"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> ቀድሞውኑ ለእርስዎ የጤና መዝገቦች ያለፈ ውሂብን መድረስ ይችላል። ይህን ለመለወጥ ለዚህ መተግበሪያ የጤና መዝገብ ፈቃዶችን ያጥፉ"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"የጤና መዝገብ ፈቃዶችን ያስተዳድሩ"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"ለዚህ መተግበሪያ የዳራ ወይም ያለፈ ወሂብ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"ለዚህ መተግበሪያ የዳራ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"ለዚህ መተግበሪያ ያለፈ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
+    <string name="historic_access_description" msgid="3309195636349468633">"ይህ መተግበሪያ ሁሉንም ያለፈ የጤና አገናኝ ውሂብ እንዲደርስ ይፍቀዱ"</string>
     <string name="background_read_description" msgid="3203594555849969283">"ይህን መተግበሪያ በማይጠቀሙበት ጊዜ መተግበሪያው የጤና አገናኝ ውሂብን እንዲደርስ ይፍቀዱለት"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"ከፈቀዱ እርስዎ ይህን መተግበሪያ በማይጠቀሙበት ጊዜ መተግበሪያው የጤና አገናኝ ውሂብን መድረስ ይችላል።"</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"ያለፈ የውሂብ መዳረሻ"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"<xliff:g id="APP_NAME">%1$s</xliff:g> ያለፈውን ውሂብ እንዲደርስ ይፈቀድለት?"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት የታከለውን የጤና አገናኝ ውሂብ እንዲደርስ ይፍቀዱለት"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"ይህ መተግበሪያ ሁሉንም ያለፈውን የጤና አገናኝ ውሂብ እንዲደርስ ይፍቀዱለት"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"ከፈቀዱ ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት የታከለውን የጤና አገናኝ ውሂብ መድረስ ይችላል።"</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"ከፈቀዱ ይህ መተግበሪያ ሁሉንም ያለፈውን የጤና አገናኝ ውሂብ መድረስ ይችላል።"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"የተቃጠሉ ገቢር ካሎሪዎች"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"የተቃጠሉ ገቢር ካሎሪዎች"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"የተቃጠሉ ገቢር ካሎሪዎችን ያነባል"</string>
@@ -324,21 +353,24 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"አሰላሳይነትን ይጻፉ"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"«<xliff:g id="APP_NAME">%1$s</xliff:g>» እንዲያነብ ይፍቀዱለት"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"«<xliff:g id="APP_NAME">%1$s</xliff:g>» እንዲጽፍ ይፍቀዱለት"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"ይቅር"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"ፍቀድ"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"ሁሉንም ፍቀድ"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"አትፍቀድ"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"ይህ መተግበሪያ እንዲያነብ ወይም በHealth Connect ላይ እንዲጽፍ የሚፈልጉትን ውሂብ ይምረጡ"</string>
+    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"ይህ መተግበሪያ የጤና አገናኝ ላይ እንዲጽፍ ወይም እንዲያነብብ የሚፈልጉትን ውሂብ ይምረጡ"</string>
+    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"ይህ መተግበሪያ ከጤና አገናኝ ላይ እንዲያነብብ የሚፈልጉትን ውሂብ ይምረጡ"</string>
+    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"ይህ መተግበሪያ የጤና አገናኝ ላይ እንዲጽፍ የሚፈልጉትን ውሂብ ይምረጡ"</string>
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"የንባብ መዳረሻ ከሰጡ መተግበሪያው አዲስ ውሂብን እና የያለፉት 30 ቀናት ውሂብን ማንበብ ይችላል"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"የንባብ መዳረሻ ከሰጡ መተግበሪያው አዲስ እና ያለፈ ውሂብን ማንበብ ይችላል"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connectን እንዲደርስ ይፈቀድለት?"</string>
+    <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"<xliff:g id="APP_NAME">%1$s</xliff:g> ያለፈ የአካል ብቃት እና ጤንነት ውሂብን እንዲደርስ ይፈቀድ?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> እንዴት ውሂብዎን እንደሚይዝ በእነሱ <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> ውስጥ ማወቅ ይችላሉ"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"የግላዊነት መመሪያ"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> የጤና መዝገቦችዎን እንዲደርስ ይፍቀዱ?"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"እርስዎ መዳረሻ ከሰጡ መተግበሪያው እንደ አለርጂዎች፣ የቤተ ሙከራ ውጤቶች፣ ክትባቶች እና ሌሎች ያሉትን ማንበብ እና መጻፍ ይችላል\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"መዳረሻ ከሰጡ መተግበሪያው እንደ አለርጂዎች፣ የቤተ ሙከራ ውጤቶች፣ ክትባቶች እና ሌሎች ያሉትን ማንበብ እና መጻፍ ይችላል\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"መዳረሻ ከሰጡ መተግበሪያው እንደ አለርጂዎች፣ የቤተ ሙከራ ውጤቶች፣ ክትባቶች እና ሌሎች ያለ ውሂብን ማንበብ ይችላል\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ስለ የጤና መዝገቦች"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"የሚያጋሩት ውሂብ"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"ከፈቀዱ <xliff:g id="APP_NAME">%1$s</xliff:g> የእርስዎን የጤና መዝገቦች ከጤና አገናኝ ጋር ማጋራት ይችላል።"</string>
+    <string name="medical_request_summary" msgid="7281321524805015510">"ከፈቀዱ <xliff:g id="APP_NAME">%1$s</xliff:g> የእርስዎን የጤና መዝገቦች ከጤና አገናኝ ጋር ማጋራት ይችላል።"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"የጤና መዝገቦችዎን በአንድ ቦታ ለማቆየት ከእርስዎ የተለያዩ መተግበሪያዎች እና ምንጮች ያስምሩ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ሁሉም ፈቃዶች ይወገዱ?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"ሁሉንም አስወግድ"</string>
@@ -1086,13 +1118,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"ያለፈው ወር"</string>
     <string name="tab_entries" msgid="3402700951602029493">"ግቤቶች"</string>
     <string name="tab_access" msgid="7818197975407243701">"መዳረሻ"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"ለ<xliff:g id="APP_NAME">%1$s</xliff:g> ተጨማሪ መዳረሻ ይፈቀድለት?"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"<xliff:g id="APP_NAME">%1$s</xliff:g> እነዚህን የጤና አገናኝ ቅንብሮች መድረስ ይፈልጋል"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"ለዚህ መተግበሪያ የዳራ ወይም ያለፈ ወሂብ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"ለዚህ መተግበሪያ የዳራ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"ለዚህ መተግበሪያ ያለፈ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> ቀድሞውኑ ለእርስዎ የጤና መዝገቦች ያለፈ ውሂብን መድረስ ይችላል። ይህን ለመለወጥ ለዚህ መተግበሪያ የጤና መዝገብ ፈቃዶችን ያጥፉ"</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"የጤና መዝገብ ፈቃዶችን ያስተዳድሩ"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"የጤና አገናኝ መጠቀም ይጀምሩ"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"የመጀመሪያ መተግበሪያዎችዎን በመካከላቸው የጤና እና የአካል ብቃት ውሂብን እንዲያጋሩ ያስምሯቸው"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"አዋቅር"</string>
@@ -1123,4 +1148,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"በ<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> የተመረጡት የ<xliff:g id="APP_NAME">%1$s</xliff:g> ግቤቶች በቋሚነት ይሰረዙ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ይህ <xliff:g id="APP_NAME">%s</xliff:g> ግቤት በቋሚነት ይሰረዝ?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"ለ<xliff:g id="APP_NAME">%2$s</xliff:g> <xliff:g id="DATA_TYPE">%1$s</xliff:g> ውሂብ በቋሚነት ይሰረዝ?"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"ትላንት በ<xliff:g id="TIME_DATE">%1$s</xliff:g> ላይ ተደርስበታል"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"በ<xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g> ላይ ተደርስበታል"</string>
 </resources>
