--- a/apk/res/values-de/strings.xml
+++ b/apk/res/values-de/strings.xml
@@ -93,27 +93,100 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"Auf meine Gesundheitsdaten zugreifen"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"Verbrannte Kalorien lesen"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"Ermöglicht der App, die verbrannten Kalorien zu lesen"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"Im Hintergrund auf alle Daten zugreifen"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"<xliff:g id="APP_NAME">%1$s</xliff:g> erlauben, im Hintergrund auf alle Daten zuzugreifen?"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"Dieser App erlauben, auf Fitness- und Wellnessdaten sowie Gesundheitsdaten zuzugreifen, wenn du die App nicht verwendest"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"Wenn du zustimmst, kann diese App auch dann auf Fitness- und Wellnessdaten sowie Gesundheitsdaten zugreifen, wenn du sie gerade nicht verwendest."</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"Auf frühere Fitness- und Wellnessdaten zugreifen"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"<xliff:g id="APP_NAME">%1$s</xliff:g> erlauben, auf frühere Fitness- und Wellnessdaten zuzugreifen?"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"Dieser App erlauben, auf Daten zuzugreifen, die vor dem <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> hinzugefügt wurden"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"Dieser App erlauben, auf alle früheren Daten zuzugreifen"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"Mit dieser Erlaubnis kann diese App auf Daten zugreifen, die vor dem <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> hinzugefügt wurden."</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"Mit dieser Erlaubnis kann diese App auf alle früheren Daten zugreifen."</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"Derzeit werden keine Fitnessdaten gelesen, da für <xliff:g id="APP_NAME">%1$s</xliff:g> keine Leseberechtigungen aktiviert sind"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"Im Hintergrund auf Daten zugreifen"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g> erlauben, im Hintergrund auf Daten zuzugreifen?"</string>
+    <!-- no translation found for background_read_single_request_title (4903874755139858906) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_both_types_granted (7716161960428574364) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_medical_granted (5162456401369633859) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_fitness_granted (6850185345786666516) -->
+    <skip />
+    <!-- no translation found for background_read_single_request_description (2679634929322639576) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_title (6848027207063414793) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description (6408051015819625330) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description_fallback (6685832866184737207) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description (9140843675330318112) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description_fallback (7685531357676523654) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_title (5509177449679251301) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_description (7136418603696342323) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_both_types_granted (4225111383019900451) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_medical_granted (7245376864667067106) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_fitness_granted (2639416977416876229) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_both_types_granted (8812552783934180223) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_medical_granted (5140647084504657934) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_fitness_granted (919785628751851996) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_title (4184649296697480520) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_description (2423480522986545286) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_title (1262267962861942478) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description (7550922315652791771) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description_fallback (3567968660826834911) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_title (9023811767370482028) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description (1437787086896636484) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description_fallback (4974756796396067521) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer (5301940225768076844) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer_link (355676489585738987) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_both_types_granted (4475972082863444603) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_medical_granted (7852915238347056139) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_fitness_granted (8691675952190647227) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_both_types_granted (7193350031798606366) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_medical_granted (8570683510275055450) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_fitness_granted (2584567718805499407) -->
+    <skip />
+    <!-- no translation found for background_read_access_title (4184498185599147117) -->
+    <skip />
+    <!-- no translation found for background_read_access_description (2360433029368320323) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_title (1375462150672418692) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description (5615959269427106141) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description_fallback (3888547064992673535) -->
+    <skip />
+    <!-- no translation found for history_read_access_title (870048398702887144) -->
+    <skip />
+    <!-- no translation found for history_read_access_description (800722432229526128) -->
+    <skip />
+    <!-- no translation found for history_read_access_description_fallback (4151538305657852010) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_read_warning (8878271647163400440) -->
+    <skip />
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> kann bereits auf frühere Daten in deinen Gesundheitsdaten zugreifen. Wenn du das ändern möchtest, deaktiviere die Berechtigungen für Gesundheitsdaten für diese App."</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Berechtigungen für Gesundheitsdaten verwalten"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Du musst mindestens 1 Leseberechtigung aktivieren, um den Hintergrundzugriff oder den Zugriff auf frühere Daten für diese App zu aktivieren"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"Du musst mindestens 1 Leseberechtigung aktivieren, um den Hintergrundzugriff für diese App zu aktivieren"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"Du musst mindestens 1 Leseberechtigung aktivieren, um den Zugriff auf frühere Daten für diese App zu aktivieren"</string>
+    <!-- no translation found for historic_access_description (3309195636349468633) -->
+    <skip />
     <string name="background_read_description" msgid="3203594555849969283">"Dieser App erlauben, auf Daten von Health Connect zuzugreifen, wenn du die App nicht verwendest"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"Mit dieser Erlaubnis kann diese App auch dann auf Health Connect-Daten zugreifen, wenn du sie gerade nicht verwendest."</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"Auf frühere Daten zugreifen"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"<xliff:g id="APP_NAME">%1$s</xliff:g> erlauben, auf frühere Daten zuzugreifen?"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"Dieser App erlauben, auf Daten von Health Connect zuzugreifen, die vor dem <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> hinzugefügt wurden"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"Dieser App erlauben, auf alle früheren Daten von Health Connect zuzugreifen"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"Mit dieser Erlaubnis kann die App auf Daten von Health Connect zugreifen, die vor dem <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> hinzugefügt wurden."</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"Mit dieser Erlaubnis kann die App auf alle früheren Daten von Health Connect zugreifen."</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Aktiv verbrannte Kalorien"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"aktiv verbrannte Kalorien"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"Aktiv verbrannte Kalorien lesen"</string>
@@ -324,21 +397,31 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"Daten zu Achtsamkeitssessions schreiben"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ Lesezugriff gewähren"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ Schreibzugriff gewähren"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"Abbrechen"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"Erlauben"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Alle zulassen"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Nicht erlauben"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"Du kannst festlegen, welche Daten diese App in Health Connect lesen und schreiben darf"</string>
+    <!-- no translation found for request_permissions_data_access_type_read_write (3179244850699732544) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_read (6005792244220381045) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_write (6369810467678676337) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Wenn du der App Lesezugriff gibst, kann sie neue Daten und die Daten der letzten 30 Tage lesen"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Wenn du der App Lesezugriff gibst, kann sie neue und frühere Daten lesen"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> Zugriff auf Health Connect erlauben?"</string>
+    <!-- no translation found for request_permissions_with_medical_header_title (6269944931319362595) -->
+    <skip />
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Wie <xliff:g id="APP_NAME">%1$s</xliff:g> mit deinen Daten umgeht, erfährst du in der <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> des Entwicklers"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"Datenschutzerklärung"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> Zugriff auf deine Gesundheitsdaten erlauben?"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"Wenn du der App Zugriff gewährst, kann sie Daten zu Allergien, Laborergebnissen, Impfungen und mehr lesen und schreiben\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <!-- no translation found for medical_request_header_access_info_read_write (221400464566148357) -->
+    <skip />
+    <!-- no translation found for medical_request_header_access_info_read (7817630833626125558) -->
+    <skip />
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informationen zu Gesundheitsdaten"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"Zu teilende Daten"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"Mit dieser Erlaubnis kann <xliff:g id="APP_NAME">%1$s</xliff:g> deine Gesundheitsdaten mit Health Connect teilen."</string>
+    <!-- no translation found for medical_request_summary (7281321524805015510) -->
+    <skip />
     <string name="medical_request_footer" msgid="6533749932770903089">"Du kannst deine Gesundheitsdaten aus verschiedenen Apps und Quellen synchronisieren lassen, um sie an einem Ort zu speichern"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Alle Berechtigungen entfernen?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Alle entfernen"</string>
@@ -1086,13 +1169,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"Letzter Monat"</string>
     <string name="tab_entries" msgid="3402700951602029493">"Einträge"</string>
     <string name="tab_access" msgid="7818197975407243701">"Zugriff"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"<xliff:g id="APP_NAME">%1$s</xliff:g> zusätzliche Zugriffsrechte gewähren?"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"Gib an, ob <xliff:g id="APP_NAME">%1$s</xliff:g> auch auf die folgenden Health Connect-Einstellungen zugreifen darf:"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Du musst mindestens 1 Leseberechtigung aktivieren, um den Hintergrundzugriff oder den Zugriff auf frühere Daten für diese App zu aktivieren"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"Du musst mindestens 1 Leseberechtigung aktivieren, um den Hintergrundzugriff für diese App zu aktivieren"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"Du musst mindestens 1 Leseberechtigung aktivieren, um den Zugriff auf frühere Daten für diese App zu aktivieren"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> kann bereits auf frühere Daten in deinen Gesundheitsdaten zugreifen. Wenn du das ändern möchtest, deaktiviere die Berechtigungen für Gesundheitsdaten für diese App."</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Berechtigungen für Gesundheitsdaten verwalten"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Verwendung von Health Connect starten"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Du kannst deine ersten Apps synchronisieren, damit Gesundheits- und Fitnessdaten zwischen ihnen geteilt werden"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"Einrichten"</string>
@@ -1123,4 +1199,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ausgewählte „<xliff:g id="APP_NAME">%1$s</xliff:g>“-Einträge für <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> endgültig löschen?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Diesen „<xliff:g id="APP_NAME">%s</xliff:g>“-Eintrag endgültig löschen?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Daten vom Typ „<xliff:g id="DATA_TYPE">%1$s</xliff:g>“ für <xliff:g id="APP_NAME">%2$s</xliff:g> endgültig löschen?"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Zugriff: gestern, <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Zugriff: <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
