--- a/apk/res/values-ja/strings.xml
+++ b/apk/res/values-ja/strings.xml
@@ -93,27 +93,56 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"健康に関するデータにアクセスします"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"消費カロリーの読み取り"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"消費カロリーの読み取りをアプリに許可します"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"バックグラウンドですべてのデータにアクセスする"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"バックグラウンドですべてのデータにアクセスすることを <xliff:g id="APP_NAME">%1$s</xliff:g> に許可しますか？"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"このアプリが使用されていないときに、フィットネスとウェルネスに関するデータと医療記録のデータへのアクセスを許可します"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"許可すると、このアプリは使用されていないときにフィットネスとウェルネスに関するデータと医療記録のデータにアクセスできます。"</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"フィットネスとウェルネスに関する過去のデータにアクセスする"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"フィットネスとウェルネスに関する過去のデータへのアクセスを <xliff:g id="APP_NAME">%1$s</xliff:g> に許可しますか？"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたデータへのアクセスを、このアプリに許可します"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"過去のすべてのデータへのアクセスを、このアプリに許可します"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"許可すると、このアプリは <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたデータにアクセスできます。"</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"許可すると、このアプリは過去のすべてのデータにアクセスできます。"</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"<xliff:g id="APP_NAME">%1$s</xliff:g> には読み取り権限がないため、現在読み取られているフィットネス データはありません"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"バックグラウンドでのデータアクセス"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g>にバックグラウンドでのデータへのアクセスを許可しますか？"</string>
+    <string name="background_read_single_request_title" msgid="4903874755139858906">"<xliff:g id="APP_NAME">%1$s</xliff:g>にバックグラウンドでのデータへのアクセスを許可しますか？"</string>
+    <string name="background_read_medical_single_request_description_both_types_granted" msgid="7716161960428574364">"許可すると、このアプリは使用されていないときにフィットネスとウェルネスに関するデータと医療記録にアクセスできます。"</string>
+    <string name="background_read_medical_single_request_description_medical_granted" msgid="5162456401369633859">"許可すると、このアプリは使用されていないときに医療記録にアクセスできます。"</string>
+    <string name="background_read_medical_single_request_description_fitness_granted" msgid="6850185345786666516">"許可すると、このアプリは使用されていないときにフィットネスとウェルネスに関するデータにアクセスできます。"</string>
+    <string name="background_read_single_request_description" msgid="2679634929322639576">"許可すると、このアプリは使用されていないときにヘルスコネクト データにアクセスできます。"</string>
+    <string name="history_read_single_request_title" msgid="6848027207063414793">"<xliff:g id="APP_NAME">%1$s</xliff:g>に過去のデータへのアクセスを許可しますか？"</string>
+    <string name="history_read_medical_single_request_description" msgid="6408051015819625330">"許可すると、このアプリは、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたフィットネスとウェルネスに関するデータにアクセスできます。"</string>
+    <string name="history_read_medical_single_request_description_fallback" msgid="6685832866184737207">"許可すると、このアプリは過去のすべてのフィットネスとウェルネスに関するデータにアクセスできます。"</string>
+    <string name="history_read_single_request_description" msgid="9140843675330318112">"許可すると、このアプリは、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたヘルスコネクト データにアクセスできます。"</string>
+    <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"許可すると、このアプリは過去のすべてのヘルスコネクト データにアクセスできます。"</string>
+    <string name="additional_permissions_combined_request_title" msgid="5509177449679251301">"<xliff:g id="APP_NAME">%1$s</xliff:g>に次のアクセスも許可しますか？"</string>
+    <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"<xliff:g id="APP_NAME">%1$s</xliff:g>は、これらのヘルスコネクトの設定へのアクセスも求めています"</string>
+    <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"バックグラウンドでのすべてのデータへのアクセス"</string>
+    <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"バックグラウンドでの医療記録へのアクセス"</string>
+    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"バックグラウンドでのフィットネスとウェルネスに関するデータへのアクセス"</string>
+    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"このアプリが使用されていないときに、フィットネスとウェルネスに関するデータと医療記録へのアクセスを許可します"</string>
+    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"このアプリが使用されていないときに、このデータへのアクセスを許可します"</string>
+    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"このアプリが使用されていないときに、このデータへのアクセスを許可します"</string>
+    <string name="background_read_combined_request_title" msgid="4184649296697480520">"バックグラウンドでのデータアクセス"</string>
+    <string name="background_read_combined_request_description" msgid="2423480522986545286">"このアプリが使用されていないときにヘルスコネクト データへのアクセスを許可します"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"フィットネスとウェルネスに関する過去のデータへのアクセス"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"このアプリに、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたデータへのアクセスを許可します"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"このアプリに、過去のすべてのデータへのアクセスを許可します"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"過去のデータへのアクセス"</string>
+    <string name="history_read_combined_request_description" msgid="1437787086896636484">"このアプリに、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたヘルスコネクト データへのアクセスを許可します"</string>
+    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"このアプリに過去のすべてのヘルスコネクト データへのアクセスを許可します"</string>
+    <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g>は医療記録の過去のデータにアクセスできるようになっています"</string>
+    <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"権限の詳細"</string>
+    <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"バックグラウンドでのすべてのデータへのアクセス"</string>
+    <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"バックグラウンドでの医療記録へのアクセス"</string>
+    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"バックグラウンドでのフィットネスとウェルネスに関するデータへのアクセス"</string>
+    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"このアプリが使用されていないときに、フィットネスとウェルネスに関するデータと医療記録へのアクセスを許可します"</string>
+    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"このアプリが使用されていないときに、このデータへのアクセスを許可します"</string>
+    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"このアプリが使用されていないときに、このデータへのアクセスを許可します"</string>
+    <string name="background_read_access_title" msgid="4184498185599147117">"バックグラウンドでのデータアクセス"</string>
+    <string name="background_read_access_description" msgid="2360433029368320323">"このアプリが使用されていないときにヘルスコネクト データへのアクセスを許可します"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"フィットネスとウェルネスに関する過去のデータへのアクセス"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"このアプリに、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたデータへのアクセスを許可します"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"このアプリに、過去のすべてのデータへのアクセスを許可します"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"過去のデータへのアクセス"</string>
+    <string name="history_read_access_description" msgid="800722432229526128">"このアプリに、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたヘルスコネクト データへのアクセスを許可します"</string>
+    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"このアプリにヘルスコネクトの過去のすべてのデータへのアクセスを許可します"</string>
+    <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"<xliff:g id="APP_NAME">%1$s</xliff:g>には読み取り権限がないため、現在読み取られているフィットネス データはありません"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> は医療記録の過去のデータにアクセスできるようになっています。この設定を変更するには、このアプリの医療記録の権限を OFF にしてください"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"医療記録の権限を管理"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"このアプリによるバックグラウンドでのアクセスまたは過去のデータのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"このアプリによるバックグラウンドでのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"このアプリによる過去のデータのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
+    <string name="historic_access_description" msgid="3309195636349468633">"このアプリに過去のすべてのヘルスコネクト データへのアクセスを許可します"</string>
     <string name="background_read_description" msgid="3203594555849969283">"このアプリが使用されていないときにヘルスコネクト データへのアクセスを許可します"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"許可すると、このアプリは使用されていないときにヘルスコネクト データにアクセスできます。"</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"過去のデータへのアクセス"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"<xliff:g id="APP_NAME">%1$s</xliff:g>に過去のデータへのアクセスを許可しますか？"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"このアプリに、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたヘルスコネクト データへのアクセスを許可します"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"このアプリに過去のすべてのヘルスコネクト データへのアクセスを許可します"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"許可すると、このアプリは、<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたヘルスコネクト データにアクセスできます。"</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"許可すると、このアプリは過去のすべてのヘルスコネクト データにアクセスできます。"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"活動中の消費カロリー"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"活動中の消費カロリー"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"活動中の消費カロリーの読み取り"</string>
@@ -324,21 +353,24 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"マインドフルネスを書き込む"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」に読み取りを許可する"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」に書き込みを許可する"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"キャンセル"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"許可"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"すべて許可"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"許可しない"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"このアプリにヘルスコネクトでの読み取りまたは書き込みを許可するデータを選択します"</string>
+    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"このアプリにヘルスコネクトでの読み取りまたは書き込みを許可するデータを選択できます"</string>
+    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"このアプリにヘルスコネクトからの読み取りを許可するデータを選択できます"</string>
+    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"このアプリにヘルスコネクトへの書き込みを許可するデータを選択できます"</string>
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"読み取りアクセス権を付与すると、このアプリは新規データと過去 30 日間のデータを読み取れるようになります"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"読み取りアクセス権を付与すると、このアプリは新規データと過去のデータを読み取れるようになります"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> にヘルスコネクトへのアクセスを許可しますか？"</string>
+    <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"<xliff:g id="APP_NAME">%1$s</xliff:g>に、フィットネスとウェルネスに関するデータへのアクセスを許可しますか？"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> によるユーザーデータの取り扱いについては、<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>をご覧ください"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"プライバシー ポリシー"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> に医療記録へのアクセスを許可しますか？"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"アクセス権を付与すると、このアプリはアレルギー、検査結果、ワクチン接種などのデータを読み書きできるようになります\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"アクセス権を付与すると、このアプリはアレルギー、検査結果、ワクチン接種などのデータの読み取りと書き込みを行えるようになります\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"アクセス権を付与すると、このアプリはアレルギー、検査結果、ワクチン接種などのデータを読み取れるようになります\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"医療記録について"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"共有するデータ"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"許可すると、<xliff:g id="APP_NAME">%1$s</xliff:g> はヘルスコネクトと医療記録を共有できるようになります。"</string>
+    <string name="medical_request_summary" msgid="7281321524805015510">"許可すると、<xliff:g id="APP_NAME">%1$s</xliff:g>は医療記録をヘルスコネクトと共有できるようになります。"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"さまざまなアプリやソースの医療記録を同期して 1 か所で管理できます"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"すべての権限を削除しますか？"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"すべて削除"</string>
@@ -1086,13 +1118,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"先月"</string>
     <string name="tab_entries" msgid="3402700951602029493">"エントリ"</string>
     <string name="tab_access" msgid="7818197975407243701">"アクセス"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"<xliff:g id="APP_NAME">%1$s</xliff:g>に次のアクセスも許可しますか？"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"<xliff:g id="APP_NAME">%1$s</xliff:g>は、これらのヘルスコネクトの設定へのアクセスも求めています"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"このアプリによるバックグラウンドでのアクセスまたは過去のデータのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"このアプリによるバックグラウンドでのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"このアプリによる過去のデータのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> は医療記録の過去のデータにアクセスできるようになっています。この設定を変更するには、このアプリの医療記録の権限を OFF にしてください"</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"医療記録の権限を管理"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"ヘルスコネクトの使用を開始する"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"健康とフィットネスに関するデータを共有する 1 つ目のアプリを同期する"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"設定"</string>
@@ -1123,4 +1148,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>の <xliff:g id="APP_NAME">%1$s</xliff:g> の選択したエントリを完全に削除しますか？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> のこのエントリを完全に削除しますか？"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> の <xliff:g id="DATA_TYPE">%1$s</xliff:g> のデータを完全に削除しますか？"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"昨日の <xliff:g id="TIME_DATE">%1$s</xliff:g> にアクセス"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g> にアクセス"</string>
 </resources>
