--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -93,27 +93,56 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"건강 데이터 액세스"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"칼로리 소모량 읽기"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"앱에서 칼로리 소모량을 읽도록 허용"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"백그라운드에서 모든 데이터에 액세스"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 백그라운드에서 모든 데이터에 액세스하도록 허용하시겠습니까?"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"이 앱을 사용하지 않을 때 앱에서 피트니스 및 웰니스 데이터 및 건강 기록 데이터에 액세스하도록 허용"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"허용하면 이 앱을 사용하지 않을 때 앱에서 피트니스 및 웰니스 데이터와 건강 기록 데이터에 액세스할 수 있습니다."</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"이전 피트니스 및 웰니스 데이터에 액세스"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 이전 피트니스 및 웰니스 데이터에 액세스하도록 허용하시겠습니까?"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 데이터에 액세스하도록 허용"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"이 앱에서 모든 이전 데이터에 액세스하도록 허용"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"허용하면 이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 데이터에 액세스할 수 있습니다."</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"허용하면 이 앱에서 모든 이전 데이터에 액세스할 수 있습니다."</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"<xliff:g id="APP_NAME">%1$s</xliff:g>에 읽기 권한이 없으므로 현재 읽고 있는 피트니스 데이터가 없습니다."</string>
-    <string name="background_read_title" msgid="5061383169517186234">"백그라운드에서 데이터에 액세스"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 백그라운드에서 데이터에 액세스하도록 허용하시겠습니까?"</string>
+    <string name="background_read_single_request_title" msgid="4903874755139858906">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 백그라운드에서 데이터에 액세스하도록 허용하시겠습니까?"</string>
+    <string name="background_read_medical_single_request_description_both_types_granted" msgid="7716161960428574364">"허용하면 이 앱을 사용하지 않을 때 앱에서 피트니스 및 웰니스 데이터와 건강 기록에 액세스할 수 있습니다."</string>
+    <string name="background_read_medical_single_request_description_medical_granted" msgid="5162456401369633859">"허용하면 이 앱을 사용하지 않을 때 앱에서 건강 기록에 액세스할 수 있습니다."</string>
+    <string name="background_read_medical_single_request_description_fitness_granted" msgid="6850185345786666516">"허용하면 이 앱을 사용하지 않을 때 앱에서 피트니스 및 웰니스 데이터에 액세스할 수 있습니다."</string>
+    <string name="background_read_single_request_description" msgid="2679634929322639576">"허용하면 이 앱을 사용하지 않을 때 앱에서 헬스 커넥트 데이터에 액세스할 수 있습니다."</string>
+    <string name="history_read_single_request_title" msgid="6848027207063414793">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 이전 데이터에 액세스하도록 허용하시겠습니까?"</string>
+    <string name="history_read_medical_single_request_description" msgid="6408051015819625330">"허용하면 이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 피트니스 및 웰니스 데이터에 액세스할 수 있습니다."</string>
+    <string name="history_read_medical_single_request_description_fallback" msgid="6685832866184737207">"허용하면 이 앱에서 모든 이전 피트니스 및 웰니스 데이터에 액세스할 수 있습니다."</string>
+    <string name="history_read_single_request_description" msgid="9140843675330318112">"허용하면 이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 헬스 커넥트 데이터에 액세스할 수 있습니다."</string>
+    <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"허용하면 이 앱에서 모든 이전 헬스 커넥트 데이터에 액세스할 수 있습니다."</string>
+    <string name="additional_permissions_combined_request_title" msgid="5509177449679251301">"<xliff:g id="APP_NAME">%1$s</xliff:g>에 추가 액세스를 허용하시겠습니까?"</string>
+    <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 헬스 커넥트 설정에도 액세스하려고 합니다."</string>
+    <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"백그라운드에서 모든 데이터에 액세스"</string>
+    <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"백그라운드에서 건강 기록에 액세스"</string>
+    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"백그라운드에서 피트니스 및 웰니스 데이터에 액세스"</string>
+    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"이 앱을 사용하지 않을 때 앱에서 피트니스 및 웰니스 데이터와 건강 기록에 액세스하도록 허용"</string>
+    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"이 앱을 사용하지 않을 때 앱에서 이 데이터에 액세스하도록 허용"</string>
+    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"이 앱을 사용하지 않을 때 앱에서 이 데이터에 액세스하도록 허용"</string>
+    <string name="background_read_combined_request_title" msgid="4184649296697480520">"백그라운드에서 데이터에 액세스"</string>
+    <string name="background_read_combined_request_description" msgid="2423480522986545286">"이 앱을 사용하지 않을 때 앱에서 헬스 커넥트 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"이전 피트니스 및 웰니스 데이터에 액세스"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"이 앱에서 모든 이전 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"이전 데이터에 액세스"</string>
+    <string name="history_read_combined_request_description" msgid="1437787086896636484">"이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 헬스 커넥트 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"이 앱에서 모든 이전 헬스 커넥트 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 이미 내 건강 기록의 과거 데이터에 액세스할 수 있습니다."</string>
+    <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"권한에 대해 자세히 알아보기"</string>
+    <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"백그라운드에서 모든 데이터에 액세스"</string>
+    <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"백그라운드에서 건강 기록에 액세스"</string>
+    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"백그라운드에서 피트니스 및 웰니스 데이터에 액세스"</string>
+    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"이 앱을 사용하지 않을 때 앱에서 피트니스 및 웰니스 데이터와 건강 기록에 액세스하도록 허용"</string>
+    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"이 앱을 사용하지 않을 때 앱에서 이 데이터에 액세스하도록 허용"</string>
+    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"이 앱을 사용하지 않을 때 앱에서 이 데이터에 액세스하도록 허용"</string>
+    <string name="background_read_access_title" msgid="4184498185599147117">"백그라운드에서 데이터에 액세스"</string>
+    <string name="background_read_access_description" msgid="2360433029368320323">"이 앱을 사용하지 않을 때 앱에서 헬스 커넥트 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"이전 피트니스 및 웰니스 데이터에 액세스"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"이 앱에서 모든 이전 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"이전 데이터에 액세스"</string>
+    <string name="history_read_access_description" msgid="800722432229526128">"이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 헬스 커넥트 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"이 앱에서 모든 이전 헬스 커넥트 데이터에 액세스하도록 허용"</string>
+    <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"<xliff:g id="APP_NAME">%1$s</xliff:g>에 읽기 권한이 없으므로 현재 읽고 있는 피트니스 데이터가 없습니다."</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 이미 내 건강 기록의 과거 데이터에 액세스할 수 있습니다. 변경하려면 이 앱의 건강 기록 권한을 사용 중지하세요."</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"건강 기록 권한 관리"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"이 앱의 백그라운드 또는 과거 데이터 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"이 앱의 백그라운드 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"이 앱의 과거 데이터 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
+    <string name="historic_access_description" msgid="3309195636349468633">"이 앱에서 모든 이전 헬스 커넥트 데이터에 액세스하도록 허용"</string>
     <string name="background_read_description" msgid="3203594555849969283">"이 앱을 사용하지 않을 때 앱에서 헬스 커넥트 데이터에 액세스하도록 허용"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"허용하면 이 앱을 사용하지 않을 때 앱에서 헬스 커넥트 데이터에 액세스할 수 있습니다."</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"이전 데이터에 액세스"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 이전 데이터에 액세스하도록 허용하시겠습니까?"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 헬스 커넥트 데이터에 액세스하도록 허용"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"이 앱에서 모든 이전 헬스 커넥트 데이터에 액세스하도록 허용"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"허용하면 이 앱에서 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> 이전에 추가된 헬스 커넥트 데이터에 액세스할 수 있습니다."</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"허용하면 이 앱에서 모든 이전 헬스 커넥트 데이터에 액세스할 수 있습니다."</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"활동 칼로리 소모량"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"활동 칼로리 소모량"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"활동 칼로리 소모량 읽기"</string>
@@ -324,21 +353,24 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"마음챙김 작성"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”에 읽기 권한 부여"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”에 쓰기 권한 부여"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"취소"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"허용"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"모두 허용"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"허용 안함"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"앱이 헬스 커넥트에서 읽거나 쓸 수 있도록 허용할 데이터를 선택하세요."</string>
+    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"앱이 헬스 커넥트에서 읽거나 쓸 수 있도록 허용할 데이터를 선택하세요."</string>
+    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"앱이 헬스 커넥트에서 읽을 수 있도록 허용할 데이터를 선택하세요."</string>
+    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"앱이 헬스 커넥트에 쓸 수 있도록 허용할 데이터를 선택하세요."</string>
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"읽기 액세스 권한을 부여하면 앱에서 새로운 데이터와 지난 30일간의 데이터를 읽을 수 있습니다."</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"읽기 액세스 권한을 부여하면 앱에서 새로운 데이터와 이전 데이터를 읽을 수 있습니다."</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 헬스 커넥트에 액세스할 수 있도록 허용하시겠습니까?"</string>
+    <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 피트니스 및 웰니스 데이터에 액세스하도록 허용하시겠습니까?"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>에서 <xliff:g id="APP_NAME">%1$s</xliff:g>의 데이터 처리 방식을 알아볼 수 있습니다."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"개인정보처리방침"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 건강 기록에 액세스하도록 허용하시겠습니까?"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"액세스 권한을 부여하면 앱에서 알레르기, 실험실 결과, 백신 등과 같은 데이터를 읽고 쓸 수 있습니다.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"액세스 권한을 부여하면 앱에서 알레르기, 임상 결과, 백신 등과 같은 데이터를 읽고 쓸 수 있습니다\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"액세스 권한을 부여하면 앱에서 알레르기, 임상 결과, 백신 등과 같은 데이터를 읽을 수 있습니다\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"건강 기록에 관한 정보"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"공유할 데이터"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"허용하면 <xliff:g id="APP_NAME">%1$s</xliff:g>에서 헬스 커넥트와 건강 기록을 공유할 수 있습니다."</string>
+    <string name="medical_request_summary" msgid="7281321524805015510">"허용하면 <xliff:g id="APP_NAME">%1$s</xliff:g>에서 헬스 커넥트와 건강 기록을 공유할 수 있습니다."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"다양한 앱과 소스의 건강 기록을 동기화하여 한곳에 보관합니다."</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"모든 권한을 삭제하시겠습니까?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"전체 삭제"</string>
@@ -1086,13 +1118,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"지난달"</string>
     <string name="tab_entries" msgid="3402700951602029493">"항목"</string>
     <string name="tab_access" msgid="7818197975407243701">"액세스"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱에 추가 액세스를 허용하시겠습니까?"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱에서 다음 헬스 커넥트 설정에도 액세스하려고 합니다."</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"이 앱의 백그라운드 또는 과거 데이터 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"이 앱의 백그라운드 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"이 앱의 과거 데이터 액세스를 사용 설정하려면 읽기 권한을 1개 이상 사용 설정하세요."</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 이미 내 건강 기록의 과거 데이터에 액세스할 수 있습니다. 변경하려면 이 앱의 건강 기록 권한을 사용 중지하세요."</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"건강 기록 권한 관리"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"헬스 커넥트 사용 시작하기"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"첫 번째 앱을 동기화하여 앱 간에 건강 및 피트니스 데이터를 공유하세요"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"설정"</string>
@@ -1123,4 +1148,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>에 해당하는 선택한 <xliff:g id="APP_NAME">%1$s</xliff:g> 항목을 완전히 삭제하시겠습니까?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"이 <xliff:g id="APP_NAME">%s</xliff:g> 항목을 완전히 삭제하시겠습니까?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g>의 <xliff:g id="DATA_TYPE">%1$s</xliff:g> 데이터를 완전히 삭제하시겠습니까?"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"어제 <xliff:g id="TIME_DATE">%1$s</xliff:g>에 액세스함"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>에 액세스함"</string>
 </resources>
