--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -93,27 +93,100 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"таны эрүүл мэндийн өгөгдөлд хандах"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"Шатаасан калорийг унших"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"Аппад шатаасан калори уншихыг зөвшөөрөх"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"Дэвсгэрт бүх өгөгдөлд хандах"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д дэвсгэрт бүх өгөгдөлд хандахыг зөвшөөрөх үү?"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"Таныг энэ аппыг ашиглаагүй байхад тухайн аппад фитнес, эрүүл оршихуйн өгөгдөл, эрүүл мэндийн түүхийн өгөгдөлд хандахыг зөвшөөрнө"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"Хэрэв та зөвшөөрвөл таныг энэ аппыг ашиглаагүй байхад тухайн апп фитнес, эрүүл оршихуйн өгөгдөл, эрүүл мэндийн түүхийн өгөгдөлд хандах боломжтой."</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"Фитнес болон эрүүл оршихуйн өмнөх өгөгдөлд хандах"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д фитнес болон эрүүл оршихуйн өмнөх өгөгдөлд хандахыг зөвшөөрөх үү?"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"Энэ аппад <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн өгөгдөлд хандахыг зөвшөөрнө"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"Энэ аппад өмнөх бүх өгөгдөлд хандахыг зөвшөөрнө"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"Хэрэв та зөвшөөрвөл энэ апп <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн өгөгдөлд хандах боломжтой."</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"Хэрэв та зөвшөөрвөл энэ апп өмнөх бүх өгөгдөлд хандах боломжтой."</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д унших зөвшөөрлийг идэвхжүүлээгүй тул одоогоор ямар ч фитнесийн өгөгдлийг уншаагүй байна"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"Ард өгөгдөлд хандах"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д дэвсгэрт өгөгдөлд хандахыг зөвшөөрөх үү?"</string>
+    <!-- no translation found for background_read_single_request_title (4903874755139858906) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_both_types_granted (7716161960428574364) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_medical_granted (5162456401369633859) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_fitness_granted (6850185345786666516) -->
+    <skip />
+    <!-- no translation found for background_read_single_request_description (2679634929322639576) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_title (6848027207063414793) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description (6408051015819625330) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description_fallback (6685832866184737207) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description (9140843675330318112) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description_fallback (7685531357676523654) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_title (5509177449679251301) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_description (7136418603696342323) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_both_types_granted (4225111383019900451) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_medical_granted (7245376864667067106) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_fitness_granted (2639416977416876229) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_both_types_granted (8812552783934180223) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_medical_granted (5140647084504657934) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_fitness_granted (919785628751851996) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_title (4184649296697480520) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_description (2423480522986545286) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_title (1262267962861942478) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description (7550922315652791771) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description_fallback (3567968660826834911) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_title (9023811767370482028) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description (1437787086896636484) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description_fallback (4974756796396067521) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer (5301940225768076844) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer_link (355676489585738987) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_both_types_granted (4475972082863444603) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_medical_granted (7852915238347056139) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_fitness_granted (8691675952190647227) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_both_types_granted (7193350031798606366) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_medical_granted (8570683510275055450) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_fitness_granted (2584567718805499407) -->
+    <skip />
+    <!-- no translation found for background_read_access_title (4184498185599147117) -->
+    <skip />
+    <!-- no translation found for background_read_access_description (2360433029368320323) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_title (1375462150672418692) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description (5615959269427106141) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description_fallback (3888547064992673535) -->
+    <skip />
+    <!-- no translation found for history_read_access_title (870048398702887144) -->
+    <skip />
+    <!-- no translation found for history_read_access_description (800722432229526128) -->
+    <skip />
+    <!-- no translation found for history_read_access_description_fallback (4151538305657852010) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_read_warning (8878271647163400440) -->
+    <skip />
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> таны эрүүл мэндийн түүхийн өмнөх өгөгдөлд хандах эрх аль хэдийн авсан байна. Үүнийг өөрчлөхийн тулд энэ аппад эрүүл мэндийн түүхийн зөвшөөрлийг унтраана уу"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Эрүүл мэндийн түүхийн зөвшөөрлийг удирдах"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Энэ аппад арын эсвэл хуучин өгөгдлийн хандалтыг асаахын тулд дор хаяж нэг унших зөвшөөрлийг идэвхжүүлнэ үү"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"Энэ аппад арын хэсгийн хандалтыг асаахын тулд дор хаяж нэг унших зөвшөөрлийг идэвхжүүлнэ үү"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"Энэ аппад хуучин өгөгдлийн хандалтыг асаахын тулд дор хаяж нэг унших зөвшөөрлийг идэвхжүүлнэ үү"</string>
+    <!-- no translation found for historic_access_description (3309195636349468633) -->
+    <skip />
     <string name="background_read_description" msgid="3203594555849969283">"Та аппыг ашиглаагүй үедээ энэ аппад Health Connect-н өгөгдөлд хандахыг зөвшөөрөх"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"Хэрэв та зөвшөөрвөл таныг аппыг ашиглаагүй үед энэ апп Health Connect-н өгөгдөлд хандах боломжтой."</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"Өмнөх өгөгдөлд хандах"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д өмнөх өгөгдөлд хандахыг зөвшөөрөх үү?"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"Энэ аппад <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн Health Connect-н өгөгдөлд хандахыг зөвшөөрөх"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"Энэ аппад Health Connect-н өмнөх бүх өгөгдөлд хандахыг зөвшөөрнө үү"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"Хэрэв та зөвшөөрвөл энэ апп <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>-с өмнө нэмсэн Health Connect-н өгөгдөлд хандах боломжтой."</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"Хэрэв та зөвшөөрвөл энэ апп Health Connect-н өмнөх бүх өгөгдөлд хандах боломжтой."</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Идэвхтэй үед шатаасан калори"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"идэвхтэй үед шатаасан калори"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"Идэвхтэй үед шатаасан калорийг унших"</string>
@@ -324,21 +397,31 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"Анхаарал төвлөрлийн өгөгдлийг бичих"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"“<xliff:g id="APP_NAME">%1$s</xliff:g>” г уншихыг зөвшөөрөх"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"“<xliff:g id="APP_NAME">%1$s</xliff:g>” г бичихийг зөвшөөрөх"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"Цуцлах"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"Зөвшөөрөх"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Бүгдийг зөвшөөрөх"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Бүү зөвшөөр"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"Та энэ аппад уншуулах эсвэл Health Connect-д бичүүлэхийг хүсэж буй өгөгдлөө сонгоно уу"</string>
+    <!-- no translation found for request_permissions_data_access_type_read_write (3179244850699732544) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_read (6005792244220381045) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_write (6369810467678676337) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Хэрэв та унших эрх өгвөл апп шинэ өгөгдөл болон сүүлийн 30 хоногийн өгөгдлийг унших боломжтой"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Хэрэв та унших эрх өгвөл апп шинэ болон өмнөх өгөгдлийг унших боломжтой"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g>-г Health Connect-д хандахыг зөвшөөрөх үү?"</string>
+    <!-- no translation found for request_permissions_with_medical_header_title (6269944931319362595) -->
+    <skip />
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Та <xliff:g id="APP_NAME">%1$s</xliff:g> таны өгөгдлийг хэрхэн зохицуулдаг болохыг тухайн аппын <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>-с мэдэж авах боломжтой"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"нууцлалын бодлого"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д таны эрүүл мэндийн түүхэд хандахыг зөвшөөрөх үү?"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"Хэрэв та хандах эрх өгвөл тухайн апп харшил, лабораторийн хариу, вакцин болон бусад өгөгдлийг унших, бичих боломжтой\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <!-- no translation found for medical_request_header_access_info_read_write (221400464566148357) -->
+    <skip />
+    <!-- no translation found for medical_request_header_access_info_read (7817630833626125558) -->
+    <skip />
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Эрүүл мэндийн түүхийн тухай"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"Хуваалцах өгөгдөл"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"Хэрэв та зөвшөөрвөл <xliff:g id="APP_NAME">%1$s</xliff:g> таны эрүүл мэндийн түүхийг Health Connect-тай хуваалцах боломжтой."</string>
+    <!-- no translation found for medical_request_summary (7281321524805015510) -->
+    <skip />
     <string name="medical_request_footer" msgid="6533749932770903089">"Өөр өөр апп болон эх сурвалжийн эрүүл мэндийн түүхээ нэг дор байлгахын тулд синк хийнэ үү"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Бүх зөвшөөрлийг хасах уу?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Бүгдийг хасах"</string>
@@ -1086,13 +1169,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"Өнгөрсөн сар"</string>
     <string name="tab_entries" msgid="3402700951602029493">"Оролт"</string>
     <string name="tab_access" msgid="7818197975407243701">"Хандалт"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д нэмэлт хандах эрхийг зөвшөөрөх үү?"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"<xliff:g id="APP_NAME">%1$s</xliff:g> мөн Health Connect-н эдгээр тохиргоонд хандахыг хүсэж байна"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Энэ аппад арын эсвэл хуучин өгөгдлийн хандалтыг асаахын тулд дор хаяж нэг унших зөвшөөрлийг идэвхжүүлнэ үү"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"Энэ аппад арын хэсгийн хандалтыг асаахын тулд дор хаяж нэг унших зөвшөөрлийг идэвхжүүлнэ үү"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"Энэ аппад хуучин өгөгдлийн хандалтыг асаахын тулд дор хаяж нэг унших зөвшөөрлийг идэвхжүүлнэ үү"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> таны эрүүл мэндийн түүхийн өмнөх өгөгдөлд хандах эрх аль хэдийн авсан байна. Үүнийг өөрчлөхийн тулд энэ аппад эрүүл мэндийн түүхийн зөвшөөрлийг унтраана уу"</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Эрүүл мэндийн түүхийн зөвшөөрлийг удирдах"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Health Connect-г ашиглаж эхлэх"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Хооронд нь эрүүл мэнд, фитнесийн өгөгдөл хуваалцах эхний аппуудаа синк хийнэ үү"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"Тохируулах"</string>
@@ -1123,4 +1199,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="APP_NAME">%1$s</xliff:g>-н <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>-н сонгогдсон оруулгуудыг бүрмөсөн устгах уу?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g>-н энэ оруулгыг бүрмөсөн устгах уу?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g>-н <xliff:g id="DATA_TYPE">%1$s</xliff:g>-н өгөгдлийг бүрмөсөн устгах уу?"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Өчигдөр <xliff:g id="TIME_DATE">%1$s</xliff:g>-д хандсан"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>-д хандсан"</string>
 </resources>
