--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -93,27 +93,100 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"ඔබේ සෞඛ්‍ය දත්ත වෙත ප්‍රවේශය"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"දහනය කරන ලද කැලරි කියවන්න"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"යෙදුමට දහන කරන ලද කැලරි කියවීමට ඉඩ දෙයි"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"පසුබිමේ ඇති සියලු ම දත්ත වෙත ප්‍රවේශ වන්න"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට පසුබිමේ දත්ත සියල්ල වෙත ප්‍රවේශ වීමට ඉඩ දෙන්න ද?"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"ඔබ යෙදුම භාවිතා නොකරන විට යෝග්‍යතා සහ සුවතා දත්ත සහ සෞඛ්‍ය වාර්තා දත්ත වෙත ප්‍රවේශ වීමට මෙම යෙදුමට ඉඩ දෙන්න"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"ඔබ ඉඩ දෙන්නේ නම්, මෙම යෙදුමට ඔබ යෙදුම භාවිතා නොකරන විට යෝග්‍යතා සහ සුවතා දත්ත සහ සෞඛ්‍ය වාර්තා දත්ත වෙත ප්‍රවේශ විය හැක."</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"අතීත යෝග්‍යතා සහ සුවතා දත්ත වෙත ප්‍රවේශ වන්න"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"<xliff:g id="APP_NAME">%1$s</xliff:g> අතීත යෝග්‍යතා සහ සුවතා දත්ත වෙත ප්‍රවේශ වීමට ඉඩ දෙන්න ද?"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>ට පෙර එක් කළ දත්ත වෙත ප්‍රවේශ වීමට මෙම යෙදුමට ඉඩ දෙන්න"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"සියලු ම අතීත දත්ත වෙත ප්‍රවේශ වීමට මෙම යෙදුමට ඉඩ දෙන්න"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"ඔබ ඉඩ දෙන්නේ නම්, මෙම යෙදුමට <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> පෙර එක් කළ දත්ත වෙත ප්‍රවේශ විය හැක."</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"ඔබ ඉඩ දෙන්නේ නම්, මෙම යෙදුමට සියලු අතීත දත්ත වෙත ප්‍රවේශ විය හැක."</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට කියවීමේ අවසරයක් නොමැති නිසා දැනට යෝග්‍යතා දත්ත කිසිවක් කියවනු නොලැබේ"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"පසුබිමේ දත්ත ප්‍රවේශ කරන්න"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට පසුබිමේ දත්ත වෙත ප්‍රවේශ වීමට ඉඩ දෙන්න ද?"</string>
+    <!-- no translation found for background_read_single_request_title (4903874755139858906) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_both_types_granted (7716161960428574364) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_medical_granted (5162456401369633859) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_fitness_granted (6850185345786666516) -->
+    <skip />
+    <!-- no translation found for background_read_single_request_description (2679634929322639576) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_title (6848027207063414793) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description (6408051015819625330) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description_fallback (6685832866184737207) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description (9140843675330318112) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description_fallback (7685531357676523654) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_title (5509177449679251301) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_description (7136418603696342323) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_both_types_granted (4225111383019900451) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_medical_granted (7245376864667067106) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_fitness_granted (2639416977416876229) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_both_types_granted (8812552783934180223) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_medical_granted (5140647084504657934) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_fitness_granted (919785628751851996) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_title (4184649296697480520) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_description (2423480522986545286) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_title (1262267962861942478) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description (7550922315652791771) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description_fallback (3567968660826834911) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_title (9023811767370482028) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description (1437787086896636484) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description_fallback (4974756796396067521) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer (5301940225768076844) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer_link (355676489585738987) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_both_types_granted (4475972082863444603) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_medical_granted (7852915238347056139) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_fitness_granted (8691675952190647227) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_both_types_granted (7193350031798606366) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_medical_granted (8570683510275055450) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_fitness_granted (2584567718805499407) -->
+    <skip />
+    <!-- no translation found for background_read_access_title (4184498185599147117) -->
+    <skip />
+    <!-- no translation found for background_read_access_description (2360433029368320323) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_title (1375462150672418692) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description (5615959269427106141) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description_fallback (3888547064992673535) -->
+    <skip />
+    <!-- no translation found for history_read_access_title (870048398702887144) -->
+    <skip />
+    <!-- no translation found for history_read_access_description (800722432229526128) -->
+    <skip />
+    <!-- no translation found for history_read_access_description_fallback (4151538305657852010) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_read_warning (8878271647163400440) -->
+    <skip />
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට දැනටමත් ඔබේ සෞඛ්‍ය වාර්තා සඳහා අතීත දත්ත වෙත ප්‍රවේශ විය හැක. මෙය වෙනස් කිරීමට, මෙම යෙදුම සඳහා සෞඛ්‍ය වාර්තා අවසර ක්‍රියාවිරහිත කරන්න"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"සෞඛ්‍ය වාර්තා අවසර කළමනාකරණය කරන්න"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"මෙම යෙදුම සඳහා පසුබිම හෝ අතීත දත්ත ප්‍රවේශය ක්‍රියාත්මක කිරීමට අවම වශයෙන් එක් කියවීම් අවසරයක්වත් සබල කරන්න"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"මෙම යෙදුම සඳහා පසුබිම් ප්‍රවේශය ක්‍රියාත්මක කිරීමට අවම වශයෙන් එක් කියවීම් අවසරයක්වත් සබල කරන්න"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"මෙම යෙදුම සඳහා අතීත දත්ත ප්‍රවේශය ක්‍රියාත්මක කිරීමට අවම වශයෙන් එක් කියවීම් අවසරයක්වත් සබල කරන්න"</string>
+    <!-- no translation found for historic_access_description (3309195636349468633) -->
+    <skip />
     <string name="background_read_description" msgid="3203594555849969283">"ඔබ යෙදුම භාවිත නොකරන විට Health Connect දත්ත වෙත ප්‍රවේශ වීමට මෙම යෙදුමට ඉඩ දෙන්න"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"ඔබ ඉඩ දෙන්නේ නම්, ඔබ යෙදුම භාවිත නොකරන විට මෙම යෙදුමට Health Connect දත්ත වෙත ප්‍රවේශ විය හැක."</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"අතීත දත්ත වෙත ප්‍රවේශය"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"පසුගිය දත්ත වෙත ප්‍රවේශ වීමට <xliff:g id="APP_NAME">%1$s</xliff:g> හට ඉඩ දෙන්න ද?"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>ට පෙර එක් කරන ලද Health Connect දත්ත වෙත ප්‍රවේශ වීමට මෙම යෙදුමට ඉඩ දෙන්න"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"පසුගිය Health Connect දත්ත සියල්ල වෙත ප්‍රවේශ වීමට මෙම යෙදුමට ඉඩ දෙන්න"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"ඔබ ඉඩ දෙන්නේ නම්, මෙම යෙදුමට <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>ට පෙර එක් කරන ලද Health Connect දත්ත වෙත ප්‍රවේශ විය හැක."</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"ඔබ ඉඩ දෙන්නේ නම්, මෙම යෙදුමට පසුගිය Health Connect දත්ත සියල්ල වෙත ප්‍රවේශ විය නොහැක."</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"දහනය කළ ක්‍රීයාකාරී කැලරි"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"දහනය කළ ක්‍රීයාකාරී කැලරි"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"දහනය කළ ක්‍රියාකාරී කැලරි කියවන්න"</string>
@@ -324,21 +397,31 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"සිහිකල්පනාව ලියන්න"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"“<xliff:g id="APP_NAME">%1$s</xliff:g>” හට කියවීමට ඉඩ දෙන්න"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"“<xliff:g id="APP_NAME">%1$s</xliff:g>” හට ලිවීමට ඉඩ දෙන්න"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"අවලංගු කරන්න"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"ඉඩ දෙන්න"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"සියල්ලට ඉඩ දෙන්න"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"ඉඩ නොදෙන්න"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"ඔබට මෙම යෙදුම Health Connect වෙත කියවීමට හෝ ලිවීමට අවශ්‍ය දත්ත තෝරන්න"</string>
+    <!-- no translation found for request_permissions_data_access_type_read_write (3179244850699732544) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_read (6005792244220381045) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_write (6369810467678676337) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"ඔබ කියවීම් ප්‍රවේශය ලබා දෙන්නේ නම්, යෙදුමට පසුගිය දින 30 සිට නව දත්ත සහ දත්ත කියවිය හැක"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"ඔබ කියවීමට ප්‍රවේශය ලබා දෙන්නේ නම්, යෙදුමට නව සහ අතීත දත්ත කියවිය හැක"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට Health Connect වෙත ප්‍රවේශ වීමට ඉඩ දෙන්නද?"</string>
+    <!-- no translation found for request_permissions_with_medical_header_title (6269944931319362595) -->
+    <skip />
     <string name="request_permissions_rationale" msgid="2642076968583316986">"ඔවුන්ගේ <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> හි <xliff:g id="APP_NAME">%1$s</xliff:g> ඔබේ දත්ත හසුරුවන ආකාරය ඔබට දැන ගත හැක"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"පෞද්ගලිකත්ව ප්‍රතිපත්තිය"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට ඔබේ සෞඛ්‍ය වාර්තා වෙත ප්‍රවේශ වීමට ඉඩ දෙන්න ද?"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"ඔබ ප්‍රවේශය ලබා දෙන්නේ නම්, යෙදුමට අසාත්මිකතා, පරීක්ෂණාගාර ප්‍රතිඵල, එන්නත් සහ තවත් බොහෝ දත්ත කියවීමට සහ ලිවීමට හැක\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <!-- no translation found for medical_request_header_access_info_read_write (221400464566148357) -->
+    <skip />
+    <!-- no translation found for medical_request_header_access_info_read (7817630833626125558) -->
+    <skip />
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"සෞඛ්‍ය වාර්තා ගැන"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"බෙදා ගැනීමට දත්ත"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"ඔබ ඉඩ දෙන්නේ නම්, <xliff:g id="APP_NAME">%1$s</xliff:g> හට ඔබේ සෞඛ්‍ය වාර්තා Health Connect සමග බෙදා ගත හැක."</string>
+    <!-- no translation found for medical_request_summary (7281321524805015510) -->
+    <skip />
     <string name="medical_request_footer" msgid="6533749932770903089">"ඔබේ සෞඛ්‍ය වාර්තා එක තැනක තබා ගැනීමට ඔබේ විවිධ යෙදුම් සහ මූලාශ්‍රවලින් සමමුහුර්ත කරන්න"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"සියලු අවසර ඉවත් කරන්න ද?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"සියල්ල ඉවත් කරන්න"</string>
@@ -1086,13 +1169,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"පසුගිය මාසය"</string>
     <string name="tab_entries" msgid="3402700951602029493">"ඇතුළත් කිරීම්"</string>
     <string name="tab_access" msgid="7818197975407243701">"ප්‍රවේශය"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"<xliff:g id="APP_NAME">%1$s</xliff:g> සඳහා අමතර ප්‍රවේශයට ඉඩ දෙන්න ද?"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"<xliff:g id="APP_NAME">%1$s</xliff:g>ට මෙම Health Connect සැකසීම් වෙත ප්‍රවේශ වීමට ද අවශ්‍යයි"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"මෙම යෙදුම සඳහා පසුබිම හෝ අතීත දත්ත ප්‍රවේශය ක්‍රියාත්මක කිරීමට අවම වශයෙන් එක් කියවීම් අවසරයක්වත් සබල කරන්න"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"මෙම යෙදුම සඳහා පසුබිම් ප්‍රවේශය ක්‍රියාත්මක කිරීමට අවම වශයෙන් එක් කියවීම් අවසරයක්වත් සබල කරන්න"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"මෙම යෙදුම සඳහා අතීත දත්ත ප්‍රවේශය ක්‍රියාත්මක කිරීමට අවම වශයෙන් එක් කියවීම් අවසරයක්වත් සබල කරන්න"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට දැනටමත් ඔබේ සෞඛ්‍ය වාර්තා සඳහා අතීත දත්ත වෙත ප්‍රවේශ විය හැක. මෙය වෙනස් කිරීමට, මෙම යෙදුම සඳහා සෞඛ්‍ය වාර්තා අවසර ක්‍රියාවිරහිත කරන්න"</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"සෞඛ්‍ය වාර්තා අවසර කළමනාකරණය කරන්න"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Health Connect භාවිත කිරීම අරඹන්න"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"ඔවුන් අතර සෞඛ්‍ය සහ යෝග්‍යතා දත්ත බෙදා ගැනීමට ඔබේ පළමු යෙදුම් සමමුහුර්ත කරන්න"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"පිහිටුවන්න"</string>
@@ -1123,4 +1199,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> සඳහා තෝරා ගත් <xliff:g id="APP_NAME">%1$s</xliff:g> ඇතුළත් කිරීම් ස්ථිරවම මකන්න ද?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"මෙම <xliff:g id="APP_NAME">%s</xliff:g> ඇතුළත් කිරීම ස්ථිරවම මකන්න ද?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> සඳහා <xliff:g id="DATA_TYPE">%1$s</xliff:g> දත්ත ස්ථිරවම මකන්න ද?"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"ප්‍රවේශ වූයේ ඊයේ <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"ප්‍රවේශ වූයේ <xliff:g id="TIME_DATE_0">%1$s</xliff:g> <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
