--- a/apk/res/values-sq/strings.xml
+++ b/apk/res/values-sq/strings.xml
@@ -93,27 +93,100 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"të ketë qasje te të dhënat e tua të shëndetit"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"Të lexojë kaloritë e djegura"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"Lejon aplikacionin që të lexojë kaloritë e djegura"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"Të qaset te të gjitha të dhënat në sfond"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të gjitha të dhënat në sfond?"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"Lejo që ky aplikacion të ketë qasje te të dhënat e fitnesit dhe mirëqenies dhe te të dhënat shëndetësore kur ti nuk e përdor aplikacionin."</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"Nëse e lejon, ky aplikacion mund të ketë qasje te të dhënat e fitnesit dhe të mirëqenies dhe te të dhënat shëndetësore kur ti nuk e përdor aplikacionin."</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"Të qaset te të dhënat e kaluara të fitnesit dhe të mirëqenies"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të dhënat e kaluara të fitnesit dhe të mirëqenies?"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"Lejo që ky aplikacion të ketë qasje te të dhënat që janë shtuar para datës <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"Lejo që ky aplikacion të ketë qasje te të gjitha të dhënat e kaluara"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"Nëse e lejon, ky aplikacion mund të ketë qasje te të dhënat e kaluara që janë shtuar para datës <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>."</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"Nëse e lejon, ky aplikacion mund të ketë qasje te të gjitha të dhënat e kaluara."</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"Nuk po lexohen aktualisht të dhënat e fitnesit pasi <xliff:g id="APP_NAME">%1$s</xliff:g> nuk ka të aktivizuara lejet për lexim"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"Të ketë qasje te të dhënat në sfond"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të dhënat në sfond?"</string>
+    <!-- no translation found for background_read_single_request_title (4903874755139858906) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_both_types_granted (7716161960428574364) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_medical_granted (5162456401369633859) -->
+    <skip />
+    <!-- no translation found for background_read_medical_single_request_description_fitness_granted (6850185345786666516) -->
+    <skip />
+    <!-- no translation found for background_read_single_request_description (2679634929322639576) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_title (6848027207063414793) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description (6408051015819625330) -->
+    <skip />
+    <!-- no translation found for history_read_medical_single_request_description_fallback (6685832866184737207) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description (9140843675330318112) -->
+    <skip />
+    <!-- no translation found for history_read_single_request_description_fallback (7685531357676523654) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_title (5509177449679251301) -->
+    <skip />
+    <!-- no translation found for additional_permissions_combined_request_description (7136418603696342323) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_both_types_granted (4225111383019900451) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_medical_granted (7245376864667067106) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_title_fitness_granted (2639416977416876229) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_both_types_granted (8812552783934180223) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_medical_granted (5140647084504657934) -->
+    <skip />
+    <!-- no translation found for background_read_medical_combined_request_description_fitness_granted (919785628751851996) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_title (4184649296697480520) -->
+    <skip />
+    <!-- no translation found for background_read_combined_request_description (2423480522986545286) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_title (1262267962861942478) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description (7550922315652791771) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_description_fallback (3567968660826834911) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_title (9023811767370482028) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description (1437787086896636484) -->
+    <skip />
+    <!-- no translation found for history_read_combined_request_description_fallback (4974756796396067521) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer (5301940225768076844) -->
+    <skip />
+    <!-- no translation found for history_read_medical_combined_request_footer_link (355676489585738987) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_both_types_granted (4475972082863444603) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_medical_granted (7852915238347056139) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_title_fitness_granted (8691675952190647227) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_both_types_granted (7193350031798606366) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_medical_granted (8570683510275055450) -->
+    <skip />
+    <!-- no translation found for background_read_medical_access_description_fitness_granted (2584567718805499407) -->
+    <skip />
+    <!-- no translation found for background_read_access_title (4184498185599147117) -->
+    <skip />
+    <!-- no translation found for background_read_access_description (2360433029368320323) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_title (1375462150672418692) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description (5615959269427106141) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_description_fallback (3888547064992673535) -->
+    <skip />
+    <!-- no translation found for history_read_access_title (870048398702887144) -->
+    <skip />
+    <!-- no translation found for history_read_access_description (800722432229526128) -->
+    <skip />
+    <!-- no translation found for history_read_access_description_fallback (4151538305657852010) -->
+    <skip />
+    <!-- no translation found for history_read_medical_access_read_warning (8878271647163400440) -->
+    <skip />
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g>mund të qaset tashmë te të dhënat e kaluara për të dhënat e tua shëndetësore. Për ta ndryshuar këtë, çaktivizo lejet për të dhënat shëndetësore për këtë aplikacion"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Menaxho lejet për të dhënat shëndetësore"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Aktivizo të paktën një leje për lexim për të aktivizuar qasjen në sfond ose qasjen te të dhënat e kaluara për këtë aplikacion"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"Aktivizo të paktën një leje për lexim për të aktivizuar qasjen në sfond për këtë aplikacion"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"Aktivizo të paktën një leje për lexim për të aktivizuar qasjen te të dhënat e kaluara për këtë aplikacion"</string>
+    <!-- no translation found for historic_access_description (3309195636349468633) -->
+    <skip />
     <string name="background_read_description" msgid="3203594555849969283">"Lejo që ky aplikacion të ketë qasje te të dhënat e Health Connect kur ti nuk e përdor aplikacionin"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"Nëse e lejon, ky aplikacion mund të ketë qasje te të dhënat e Health Connect kur ti nuk e përdor aplikacionin."</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"Të qaset te të dhënat e kaluara"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të dhënat e kaluara?"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"Lejo që ky aplikacion të ketë qasje te të dhënat e Health Connect që janë shtuar para datës <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"Lejo që ky aplikacion të ketë qasje te të gjitha të dhënat e kaluara të Health Connect"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"Nëse e lejon, ky aplikacion mund të ketë qasje te të dhënat e Health Connect që janë shtuar para datës <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>."</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"Nëse e lejon, ky aplikacion mund të ketë qasje te të gjitha të dhënat e kaluara të Health Connect."</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Kalori aktive të djegura"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"kalori aktive të djegura"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"Të lexojë të dhënat për kaloritë aktive të djegura"</string>
@@ -324,21 +397,31 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"Të shkruajë të dhënat e ndërgjegjësimit të plotë"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"Lejo \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" të lexojë"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"Lejo \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" të shkruajë"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"Anulo"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"Lejo"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Lejoji të gjitha"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Mos lejo"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"Zgjidh të dhënat që dëshiron që ky aplikacion të lexojë ose të shkruajë te Health Connect"</string>
+    <!-- no translation found for request_permissions_data_access_type_read_write (3179244850699732544) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_read (6005792244220381045) -->
+    <skip />
+    <!-- no translation found for request_permissions_data_access_type_write (6369810467678676337) -->
+    <skip />
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Nëse i jep qasje për të lexuar, aplikacioni mund të lexojë të dhëna të reja dhe të dhëna nga 30 ditët e fundit"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Nëse i jep qasje për të lexuar, aplikacioni mund të lexojë të dhënat e reja dhe të kaluara"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Të lejohet <xliff:g id="APP_NAME">%1$s</xliff:g> që të ketë qasje në Health Connect?"</string>
+    <!-- no translation found for request_permissions_with_medical_header_title (6269944931319362595) -->
+    <skip />
     <string name="request_permissions_rationale" msgid="2642076968583316986">"Mund të mësosh se si <xliff:g id="APP_NAME">%1$s</xliff:g> i administron të dhënat e tua te <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"politika e privatësisë"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të dhënat të dhënat e tua shëndetësore?"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"Nëse jep qasje, aplikacioni mund të lexojë dhe të shkruajë të dhënat si p.sh. alergjitë, rezultatet laboratorike, vaksinat etj.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <!-- no translation found for medical_request_header_access_info_read_write (221400464566148357) -->
+    <skip />
+    <!-- no translation found for medical_request_header_access_info_read (7817630833626125558) -->
+    <skip />
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Rreth të dhënave shëndetësore"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"Të dhënat për t\'u ndarë"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"Nëse e lejon, <xliff:g id="APP_NAME">%1$s</xliff:g> mund të ndajë të dhënat e tua shëndetësore me Health Connect."</string>
+    <!-- no translation found for medical_request_summary (7281321524805015510) -->
+    <skip />
     <string name="medical_request_footer" msgid="6533749932770903089">"Të sinkronizojë të dhënat e tua shëndetësore nga aplikacionet dhe burime të ndryshme për t\'i mbajtur në një vend të vetëm"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Të hiqen të gjitha lejet?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Hiqi të gjitha"</string>
@@ -1086,13 +1169,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"Muaji i fundit"</string>
     <string name="tab_entries" msgid="3402700951602029493">"Hyrjet"</string>
     <string name="tab_access" msgid="7818197975407243701">"Qasja"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"Të lejohet qasja shtesë për <xliff:g id="APP_NAME">%1$s</xliff:g>?"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"<xliff:g id="APP_NAME">%1$s</xliff:g> dëshiron gjithashtu që të ketë qasje te këto cilësime të Health Connect"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"Aktivizo të paktën një leje për lexim për të aktivizuar qasjen në sfond ose qasjen te të dhënat e kaluara për këtë aplikacion"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"Aktivizo të paktën një leje për lexim për të aktivizuar qasjen në sfond për këtë aplikacion"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"Aktivizo të paktën një leje për lexim për të aktivizuar qasjen te të dhënat e kaluara për këtë aplikacion"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g>mund të qaset tashmë te të dhënat e kaluara për të dhënat e tua shëndetësore. Për ta ndryshuar këtë, çaktivizo lejet për të dhënat shëndetësore për këtë aplikacion"</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Menaxho lejet për të dhënat shëndetësore"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Fillo të përdorësh Health Connect"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Sinkronizo aplikacionet e tua të para për të ndarë të dhënat e shëndetit dhe fitnesit mes tyre"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"Konfiguro"</string>
@@ -1123,4 +1199,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Të fshihen përgjithmonë hyrjet e zgjedhura të <xliff:g id="APP_NAME">%1$s</xliff:g> për <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Të fshihet përgjithmonë kjo hyrje e <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Të fshihen përgjithmonë të dhënat për <xliff:g id="DATA_TYPE">%1$s</xliff:g> për <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"Qasja e fundit dje në <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"Qasja e fundit më <xliff:g id="TIME_DATE_0">%1$s</xliff:g> në <xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
