--- a/apk/res/values-zh-rCN/strings.xml
+++ b/apk/res/values-zh-rCN/strings.xml
@@ -93,27 +93,56 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"访问您的健康数据"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"读取消耗的卡路里数"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"允许该应用读取消耗的卡路里数"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"在后台访问所有数据"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”在后台访问所有数据吗？"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"允许此应用在您未使用它时访问健身和健康数据以及健康记录数据"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"如果您允许，此应用可以在您未使用它时访问健身和健康数据以及健康记录数据。"</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"访问过往的健身和健康数据"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问过往的健身和健康数据吗？"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"允许此应用访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的数据"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"允许此应用访问所有过往数据"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"如果您允许，此应用可以访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的数据。"</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"如果您允许，此应用可以访问所有过往数据。"</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"目前未读取任何健身数据，因为“<xliff:g id="APP_NAME">%1$s</xliff:g>”没有读取权限"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"访问后台数据"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"要允许 <xliff:g id="APP_NAME">%1$s</xliff:g> 访问后台数据吗？"</string>
+    <string name="background_read_single_request_title" msgid="4903874755139858906">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”在后台访问数据吗？"</string>
+    <string name="background_read_medical_single_request_description_both_types_granted" msgid="7716161960428574364">"如果您允许，此应用将可以在您未使用它时访问健身与健康数据以及健康记录。"</string>
+    <string name="background_read_medical_single_request_description_medical_granted" msgid="5162456401369633859">"如果您允许，此应用将可以在您未使用它时访问健康记录。"</string>
+    <string name="background_read_medical_single_request_description_fitness_granted" msgid="6850185345786666516">"如果您允许，此应用将可以在您未使用它时访问健身与健康数据。"</string>
+    <string name="background_read_single_request_description" msgid="2679634929322639576">"如果您允许，此应用将可以在您未使用它时访问“健康数据共享”数据。"</string>
+    <string name="history_read_single_request_title" msgid="6848027207063414793">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问过往数据吗？"</string>
+    <string name="history_read_medical_single_request_description" msgid="6408051015819625330">"如果您允许，此应用将可以访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的健身与健康数据。"</string>
+    <string name="history_read_medical_single_request_description_fallback" msgid="6685832866184737207">"如果您允许，此应用将可以访问所有过往的健身与健康数据。"</string>
+    <string name="history_read_single_request_description" msgid="9140843675330318112">"如果您允许，此应用将可以访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的“健康数据共享”数据。"</string>
+    <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"如果您允许，此应用将可以访问所有过往的“健康数据共享”数据。"</string>
+    <string name="additional_permissions_combined_request_title" msgid="5509177449679251301">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”获得额外访问权限吗？"</string>
+    <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”还想访问这些“健康数据共享”设置"</string>
+    <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"在后台访问所有数据"</string>
+    <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"在后台访问健康记录"</string>
+    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"在后台访问健身与健康数据"</string>
+    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"允许此应用在您未使用它时访问健身与健康数据以及健康记录"</string>
+    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"允许此应用在您未使用它时访问此类数据"</string>
+    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"允许此应用在您未使用它时访问此类数据"</string>
+    <string name="background_read_combined_request_title" msgid="4184649296697480520">"在后台访问数据"</string>
+    <string name="background_read_combined_request_description" msgid="2423480522986545286">"允许此应用在您未使用它时访问“健康数据共享”数据"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"访问过往的健身与健康数据"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"允许此应用访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的数据"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"允许此应用访问所有过往数据"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"访问过往数据"</string>
+    <string name="history_read_combined_request_description" msgid="1437787086896636484">"允许此应用访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的“健康数据共享”数据"</string>
+    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"允许此应用访问所有过往的“健康数据共享”数据"</string>
+    <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”已拥有访问过往的健康记录数据的权限"</string>
+    <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"详细了解权限"</string>
+    <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"在后台访问所有数据"</string>
+    <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"在后台访问健康记录"</string>
+    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"在后台访问健身与健康数据"</string>
+    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"允许此应用在您未使用它时访问健身与健康数据以及健康记录"</string>
+    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"允许此应用在您未使用它时访问此类数据"</string>
+    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"允许此应用在您未使用它时访问此类数据"</string>
+    <string name="background_read_access_title" msgid="4184498185599147117">"在后台访问数据"</string>
+    <string name="background_read_access_description" msgid="2360433029368320323">"允许此应用在您未使用它时访问“健康数据共享”数据"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"访问过往的健身与健康数据"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"允许此应用访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的数据"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"允许此应用访问所有过往数据"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"访问过往数据"</string>
+    <string name="history_read_access_description" msgid="800722432229526128">"允许此应用访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的“健康数据共享”数据"</string>
+    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"允许此应用访问所有过往的“健康数据共享”数据"</string>
+    <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"目前未读取任何健身数据，因为“<xliff:g id="APP_NAME">%1$s</xliff:g>”没有读取此类数据的权限"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”已经能够访问您过往的健康记录数据。如需更改此设置，请为此应用关闭健康记录相关权限"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"管理健康记录相关权限"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"请至少启用一项读取权限，以便为此应用开启后台或历史数据访问权"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"请至少启用一项读取权限，以便为此应用开启后台数据访问权"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"请至少启用一项读取权限，以便为此应用开启历史数据访问权"</string>
+    <string name="historic_access_description" msgid="3309195636349468633">"允许此应用访问所有过往的“健康数据共享”数据"</string>
     <string name="background_read_description" msgid="3203594555849969283">"允许此应用在后台访问“健康数据共享”数据"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"如果您允许，此应用可以在您不使用此应用时访问“健康数据共享”数据。"</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"访问历史数据"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问过去的数据？"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"允许此应用访问在<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的“健康数据共享”数据"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"允许此应用访问“健康数据共享”的所有历史数据"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"如果您允许，此应用可以访问在 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>之前添加的“健康数据共享”数据。"</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"如果您允许，此应用可以访问“健康数据共享”的所有历史数据。"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"运动消耗的卡路里"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"运动消耗的卡路里"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"读取运动消耗的卡路里数据"</string>
@@ -324,21 +353,24 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"写入正念数据"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”读取"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”写入"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"取消"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"允许"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"全部允许"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"不允许"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"选择允许此应用对健康数据共享读取或写入数据"</string>
+    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"选择您希望允许此应用从“健康数据共享”读取或写入到“健康数据共享”的数据"</string>
+    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"选择您希望允许此应用从“健康数据共享”读取的数据"</string>
+    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"选择您希望允许此应用写入到“健康数据共享”的数据"</string>
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"如果您授予读取权限，该应用可以读取新数据和过去 30 天的数据"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"如果您授予读取权限，该应用可以读取新数据和过去的数据"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"要允许<xliff:g id="APP_NAME">%1$s</xliff:g>访问健康数据共享吗？"</string>
+    <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问健身与健康数据吗？"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"您可以参阅“<xliff:g id="APP_NAME">%1$s</xliff:g>”的<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>，了解该应用如何处理您的数据"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"隐私权政策"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"要允许“<xliff:g id="APP_NAME">%1$s</xliff:g>”访问您的健康记录吗？"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"如果您授予访问权限，该应用将可以读取和写入过敏反应、化验结果、疫苗接种等数据\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"如果您授予访问权限，此应用将可以读取和写入过敏反应、化验结果、疫苗接种等数据\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"如果您授予访问权限，此应用将可以读取过敏反应、化验结果、疫苗接种等数据\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"关于健康记录"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"要共享的数据"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"如果您允许，“<xliff:g id="APP_NAME">%1$s</xliff:g>”将可以与“健康数据共享”共享您的健康记录。"</string>
+    <string name="medical_request_summary" msgid="7281321524805015510">"如果您允许，“<xliff:g id="APP_NAME">%1$s</xliff:g>”将可以与“健康数据共享”共享您的健康记录。"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"同步来自不同应用和来源的健康记录，将其集中存放在一个位置"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"要撤消所有权限吗？"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"全部移除"</string>
@@ -1086,13 +1118,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"上个月"</string>
     <string name="tab_entries" msgid="3402700951602029493">"条目"</string>
     <string name="tab_access" msgid="7818197975407243701">"有访问权限的应用"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"允许 <xliff:g id="APP_NAME">%1$s</xliff:g> 获得额外访问权限？"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"<xliff:g id="APP_NAME">%1$s</xliff:g> 还想访问这些“健康数据共享”设置"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"请至少启用一项读取权限，以便为此应用开启后台或历史数据访问权"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"请至少启用一项读取权限，以便为此应用开启后台数据访问权"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"请至少启用一项读取权限，以便为此应用开启历史数据访问权"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”已经能够访问您过往的健康记录数据。如需更改此设置，请为此应用关闭健康记录相关权限"</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"管理健康记录相关权限"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"开始使用“健康数据共享”"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"同步您的首批应用，以便在它们之间共享健康与健身数据"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"设置"</string>
@@ -1123,4 +1148,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"要永久删除此“<xliff:g id="APP_NAME">%s</xliff:g>”条目吗？"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"要永久删除“<xliff:g id="APP_NAME">%2$s</xliff:g>”的<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"昨天<xliff:g id="TIME_DATE">%1$s</xliff:g>访问过"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"<xliff:g id="TIME_DATE_0">%1$s</xliff:g><xliff:g id="TIME_DATE_1">%2$s</xliff:g>访问过"</string>
 </resources>
