--- a/apk/res/values-zh-rHK/strings.xml
+++ b/apk/res/values-zh-rHK/strings.xml
@@ -93,27 +93,56 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"存取你的健康資料"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"讀取卡路里消耗量資料"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"允許應用程式讀取卡路里消耗量資料"</string>
-    <string name="background_read_medical_title" msgid="378446129450196253">"在背景存取所有資料"</string>
-    <string name="background_read_medical_request_title" msgid="5388067032484069722">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」在背景存取所有資料嗎？"</string>
-    <string name="background_read_medical_description" msgid="4205144207056391848">"允許此應用程式在你不使用時存取健身與健康資料及健康記錄資料"</string>
-    <string name="background_read_medical_request_description" msgid="6135447220241108032">"如授予此權限，此應用程式可在你不使用時存取健身與健康資料及健康記錄資料。"</string>
-    <string name="historic_access_medical_title" msgid="1198466488695524014">"存取過往的健身與健康資料"</string>
-    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取過往的健身與健康資料嗎？"</string>
-    <string name="historic_access_medical_description" msgid="513689388911992345">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料"</string>
-    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"允許此應用程式存取所有過往資料"</string>
-    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"如授予此權限，此應用程式可存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料。"</string>
-    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"如授予此權限，此應用程式可存取所有過往資料。"</string>
-    <string name="historic_access_medical_warning" msgid="6691110601538756473">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」沒有讀取權限，目前未有讀取任何健身資料"</string>
-    <string name="background_read_title" msgid="5061383169517186234">"在背景存取資料"</string>
-    <string name="background_read_request_title" msgid="8492898140120977977">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」在背景存取資料嗎？"</string>
+    <string name="background_read_single_request_title" msgid="4903874755139858906">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」在背景存取資料嗎？"</string>
+    <string name="background_read_medical_single_request_description_both_types_granted" msgid="7716161960428574364">"如授予此權限，此應用程式可在你不使用時存取健身與健康資料及健康記錄。"</string>
+    <string name="background_read_medical_single_request_description_medical_granted" msgid="5162456401369633859">"如授予此權限，此應用程式可在你不使用時存取健康記錄。"</string>
+    <string name="background_read_medical_single_request_description_fitness_granted" msgid="6850185345786666516">"如授予此權限，此應用程式可在你不使用時存取健身與健康資料。"</string>
+    <string name="background_read_single_request_description" msgid="2679634929322639576">"如授予此權限，此應用程式可在你不使用時存取「健康資料同步」資料。"</string>
+    <string name="history_read_single_request_title" msgid="6848027207063414793">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取過往資料嗎？"</string>
+    <string name="history_read_medical_single_request_description" msgid="6408051015819625330">"如授予此權限，此應用程式可存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的健身與健康資料。"</string>
+    <string name="history_read_medical_single_request_description_fallback" msgid="6685832866184737207">"如授予此權限，此應用程式可存取所有過往的健身與健康資料。"</string>
+    <string name="history_read_single_request_description" msgid="9140843675330318112">"如授予此權限，此應用程式可存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的「健康資料同步」資料。"</string>
+    <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"如授予此權限，此應用程式可存取過往所有「健康資料同步」資料。"</string>
+    <string name="additional_permissions_combined_request_title" msgid="5509177449679251301">"要授予「<xliff:g id="APP_NAME">%1$s</xliff:g>」其他存取權嗎？"</string>
+    <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」同時要求存取這些「健康資料同步」設定"</string>
+    <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"在背景存取所有資料"</string>
+    <string name="background_read_medical_combined_request_title_medical_granted" msgid="7245376864667067106">"在背景存取健康記錄"</string>
+    <string name="background_read_medical_combined_request_title_fitness_granted" msgid="2639416977416876229">"在背景存取健身與健康資料"</string>
+    <string name="background_read_medical_combined_request_description_both_types_granted" msgid="8812552783934180223">"允許此應用程式在你不使用時存取健身與健康資料及健康記錄"</string>
+    <string name="background_read_medical_combined_request_description_medical_granted" msgid="5140647084504657934">"允許此應用程式在你不使用時存取這些資料"</string>
+    <string name="background_read_medical_combined_request_description_fitness_granted" msgid="919785628751851996">"允許此應用程式在你不使用時存取這些資料"</string>
+    <string name="background_read_combined_request_title" msgid="4184649296697480520">"在背景存取資料"</string>
+    <string name="background_read_combined_request_description" msgid="2423480522986545286">"允許此應用程式在你不使用時存取「健康資料同步」資料"</string>
+    <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"存取過往的健身與健康資料"</string>
+    <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"允許此應用程式存取所有過往資料"</string>
+    <string name="history_read_combined_request_title" msgid="9023811767370482028">"存取過往資料"</string>
+    <string name="history_read_combined_request_description" msgid="1437787086896636484">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的「健康資料同步」資料"</string>
+    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"允許此應用程式存取過往所有「健康資料同步」資料"</string>
+    <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」已可存取過往的健康記錄資料"</string>
+    <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"進一步瞭解權限"</string>
+    <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"在背景存取所有資料"</string>
+    <string name="background_read_medical_access_title_medical_granted" msgid="7852915238347056139">"在背景存取健康記錄"</string>
+    <string name="background_read_medical_access_title_fitness_granted" msgid="8691675952190647227">"在背景存取健身與健康資料"</string>
+    <string name="background_read_medical_access_description_both_types_granted" msgid="7193350031798606366">"允許此應用程式在你不使用時存取健身與健康資料及健康記錄"</string>
+    <string name="background_read_medical_access_description_medical_granted" msgid="8570683510275055450">"允許此應用程式在你不使用時存取這些資料"</string>
+    <string name="background_read_medical_access_description_fitness_granted" msgid="2584567718805499407">"允許此應用程式在你不使用時存取這些資料"</string>
+    <string name="background_read_access_title" msgid="4184498185599147117">"在背景存取資料"</string>
+    <string name="background_read_access_description" msgid="2360433029368320323">"允許此應用程式在你不使用時存取「健康資料同步」資料"</string>
+    <string name="history_read_medical_access_title" msgid="1375462150672418692">"存取過往的健身與健康資料"</string>
+    <string name="history_read_medical_access_description" msgid="5615959269427106141">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"允許此應用程式存取所有過往資料"</string>
+    <string name="history_read_access_title" msgid="870048398702887144">"存取過往資料"</string>
+    <string name="history_read_access_description" msgid="800722432229526128">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的「健康資料同步」資料"</string>
+    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"允許此應用程式存取過往所有「健康資料同步」資料"</string>
+    <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」沒有讀取權限，目前未有讀取任何健身資料"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」已可存取過往的健康記錄資料。如要變更此設定，請關閉此應用程式的健康記錄權限"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"管理健康記錄權限"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"需要啟用至少一項讀取權限，才能開啟此應用程式的背景或過往資料存取權"</string>
+    <string name="additional_access_background_footer" msgid="1638739578431818525">"需要啟用至少一項讀取權限，才能開啟此應用程式的背景存取權"</string>
+    <string name="additional_access_history_footer" msgid="5326814559930548467">"需要啟用至少一項讀取權限，才能開啟此應用程式的過往資料存取權"</string>
+    <string name="historic_access_description" msgid="3309195636349468633">"允許此應用程式存取過往所有「健康資料同步」資料"</string>
     <string name="background_read_description" msgid="3203594555849969283">"允許此應用程式在你沒有使用應用程式時存取「健康資料同步」資料"</string>
-    <string name="background_read_request_description" msgid="1664402237648709581">"如授予此權限，此應用程式可在你沒有使用應用程式時存取「健康資料同步」資料。"</string>
-    <string name="historic_access_title" msgid="3584594624937737030">"存取過往資料"</string>
-    <string name="historic_access_request_title" msgid="4645920231853414742">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取過往資料嗎？"</string>
-    <string name="historic_access_description" msgid="2616669701088141765">"允許此應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前新增的「健康資料同步」資料"</string>
-    <string name="historic_access_description_fallback" msgid="3361696143557784403">"允許此應用程式存取過往所有「健康資料同步」資料"</string>
-    <string name="historic_access_request_description" msgid="136335743939253358">"如授予此權限，此應用程式可存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前新增的「健康資料同步」資料。"</string>
-    <string name="historic_access_request_description_fallback" msgid="8519401358044984479">"如授予此權限，此應用程式可存取過往所有「健康資料同步」資料。"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"活動卡路里消耗量"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"活動卡路里消耗量"</string>
     <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"讀取活動卡路里消耗量資料"</string>
@@ -324,21 +353,24 @@
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"寫入正念"</string>
     <string name="read_permission_category" msgid="6002099618259628632">"允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」讀取"</string>
     <string name="write_permission_category" msgid="1529702804865008111">"允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」寫入"</string>
-    <string name="request_permissions_cancel" msgid="1787483997235365393">"取消"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"允許"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"全部允許"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"不允許"</string>
-    <string name="request_permissions_header_desc" msgid="5561173070722750153">"選擇你希望此應用程式讀取或寫入 Health Connect 的資料"</string>
+    <string name="request_permissions_data_access_type_read_write" msgid="3179244850699732544">"選擇你希望此應用程式讀取或寫入「健康資料同步」的資料"</string>
+    <string name="request_permissions_data_access_type_read" msgid="6005792244220381045">"選擇你希望此應用程式讀取的「健康資料同步」資料"</string>
+    <string name="request_permissions_data_access_type_write" msgid="6369810467678676337">"選擇你希望此應用程式寫入「健康資料同步」的資料"</string>
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"如果授予讀取權限，應用程式可讀取新資料和過去 30 天內的資料"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"如果授予讀取權限，應用程式可讀取新資料和過去的資料"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取 Health Connect 嗎？"</string>
+    <string name="request_permissions_with_medical_header_title" msgid="6269944931319362595">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健身與健康資料嗎？"</string>
     <string name="request_permissions_rationale" msgid="2642076968583316986">"如要瞭解「<xliff:g id="APP_NAME">%1$s</xliff:g>」如何處理你的資料，請參閱<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"私隱權政策"</string>
     <string name="medical_request_header" msgid="2300521519021510027">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健康記錄嗎？"</string>
-    <string name="medical_request_header_desc" msgid="5721171305631983663">"如授予權限，應用程式便可讀取和寫入過敏、檢測結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"如授予權限，應用程式便可讀取和寫入過敏、檢測結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"如授予權限，應用程式便可讀取過敏、檢測結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"關於健康記錄"</string>
     <string name="medical_request_data_to_share" msgid="2208383833492573960">"要分享的資料"</string>
-    <string name="medical_request_share" msgid="6237397362923728514">"如授予權限，「<xliff:g id="APP_NAME">%1$s</xliff:g>」便可與「健康資料同步」分享你的健康記錄。"</string>
+    <string name="medical_request_summary" msgid="7281321524805015510">"如授予權限，「<xliff:g id="APP_NAME">%1$s</xliff:g>」便可與「健康資料同步」分享你的健康記錄。"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"同步其他應用程式和來源的健康記錄，將健康記錄集中一處"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"要移除所有權限嗎？"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"全部移除"</string>
@@ -1086,13 +1118,6 @@
     <string name="last_month_header" msgid="1359164797239191253">"上個月"</string>
     <string name="tab_entries" msgid="3402700951602029493">"項目"</string>
     <string name="tab_access" msgid="7818197975407243701">"存取權"</string>
-    <string name="request_additional_permissions_header_title" msgid="948421892753976588">"要授予「<xliff:g id="APP_NAME">%1$s</xliff:g>」其他存取權嗎？"</string>
-    <string name="request_additional_permissions_description" msgid="4179425089090269042">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」同時要求存取這些「健康資料同步」設定"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"需要啟用至少一項讀取權限，才能開啟此應用程式的背景或過往資料存取權"</string>
-    <string name="additional_access_background_footer" msgid="1638739578431818525">"需要啟用至少一項讀取權限，才能開啟此應用程式的背景存取權"</string>
-    <string name="additional_access_history_footer" msgid="5326814559930548467">"需要啟用至少一項讀取權限，才能開啟此應用程式的過往資料存取權"</string>
-    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」已可存取過往的健康記錄資料。如要變更此設定，請關閉此應用程式的健康記錄權限"</string>
-    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"管理健康記錄權限"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"開始使用「健康資料同步」"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"同步第一個應用程式，即可在這些應用程式間分享健康和健身資料"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"設定"</string>
@@ -1123,4 +1148,12 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"要永久刪除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>所選的「<xliff:g id="APP_NAME">%1$s</xliff:g>」項目嗎？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"要永久刪除此「<xliff:g id="APP_NAME">%s</xliff:g>」項目嗎？"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"要永久刪除「<xliff:g id="APP_NAME">%2$s</xliff:g>」的<xliff:g id="DATA_TYPE">%1$s</xliff:g>資料嗎？"</string>
+    <!-- no translation found for on (8266542510798355807) -->
+    <skip />
+    <!-- no translation found for off (6996623844428550649) -->
+    <skip />
+    <!-- no translation found for wear_app_perms_24h_access (2997184871873750357) -->
+    <skip />
+    <string name="wear_app_perms_24h_access_yest" msgid="325061728619254928">"上次存取時間：昨天<xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
+    <string name="wear_app_perms_7d_access" msgid="5694169440873563459">"上次存取時間：<xliff:g id="TIME_DATE_0">%1$s</xliff:g><xliff:g id="TIME_DATE_1">%2$s</xliff:g>"</string>
 </resources>
